--- a/trunk/perldoc/ko/perl/5.10/perlop.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlop.pod
@@ -1328,13 +1328,13 @@ Using "or" for assignment is unlikely to do what you want; see below.
 
 =end original
 
-“ÓÛ“ìý“ªÇ "or" “ªò“ÞÅ“ª¦“ªÈ“¡¢“ª·“ª¿“ª¤“ª³“ªÈ“ªÈ“êÞ“ª¦“ª³“ªÈ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ì¤“ù»“ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+“´ë“ÀÔ“¿¡“¼­ "or" “¸¦ “»ç“¿ë“ÇÏ“¸é, “ÇÏ“·Á“´ø “°Í“°ú “´Ù“¸¥ “°Í“ÀÌ “µË“´Ï“´Ù.
+“¾Æ“·¡“¸¦ “Âü“Á¶“ÇÏ“¼¼“¿ä.
 
 =head2 Range Operators
 X<operator, range> X<range> X<..> X<...>
 
-(“Ûô’°Ï“æÑ“ß©“í­)
+(“¹ü“À§ “¿¬“»ê“ÀÚ)
 
 =begin original
 
@@ -1351,16 +1351,16 @@ like this:
 
 =end original
 
-“ì£“ú£“æÑ“ß©“í­“ªÎ ".." “ªÏ“Ûô’°Ï“æÑ“ß©“í­“ªÇ“¡¢“ÞÅ“ªï“ªì“ªë“«³“«ó“«Æ“«­“«¹“«È“ªË“ªè“ªÃ“ªÆ
-“ì¶“ªÊ“ªë“ÔÑ“íÂ“ªò“ª¹“ªë 2 “ªÄ“ªÎ“æÑ“ß©“í­“ªò“ùê“ªï“ª»“ª¿“ªâ“ªÎ“ªÇ“ª¹“¡£
-“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“¡¢“ñ§“ªÎ“ö·“ª«“ªé“éÓ“ªÎ“ö·“ªÞ“ªÇ (1 “ªÅ“ªÄ“ã°“â÷“ªÇ) ‘Êý“ª¨“ª¢“ª²“ª¿“ö·“ª«“ªé
-“ªÊ“ªë“«ê“«¹“«È“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“ñ§“ö°“ªÎ“ö·“ª¬“éÓ“ö°“ªÎ“ö·“ªè“ªê“ÓÞ“ª­“ª¤“íÞ“ùê“ªÏ“¡¢“Íö“«ê“«¹“«È“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“Ûô’°Ï“æÑ“ß©“í­“ªÏ“¡¢C<foreach (1..10)> “ªÎ“ªè“ª¦“ªÊ“«ë’¡¼“«×“ªò“ßö“ª¯“ªÈ“ª­“ªä“¡¢
-“ÛÕ“Öª“ªÎ“«¹“«é“«¤“«¹“æÑ“ß©“ªò“ú¼“ªÊ“ª¦“ªÈ“ª­“ªË“øµ“××“ªÇ“ª¹“¡£
-“úÞ‘×´“ªÎ’¼Â‘×°“ªÇ“ªÏ“¡¢C<foreach> “«ë’¡¼“«×“ªÎ“ãÒ“ªÎ“ñé“ªÇ“Ûô’°Ï“æÑ“ß©“í­“ªò“ÞÅ“ªÃ“ªÆ“ªâ
-“ìé“ãÁ“ÛÕ“Öª“ªÏ“íÂ“ªê“ªÞ“ª»“ªó“ª¬“¡¢“Í¯“ª¤ Perl “ªÏ“ì¤“ù»“ªÎ“ªè“ª¦“ªÊ“ª³“ªÈ“ªò“ßö“ª¯“ªÈ“¡¢
-“ÓÞ“Õá“ªÎ“«á“«â“«ê“ªò“á¼“Þ¨“ª¹“ªë“ª³“ªÈ“ªË“ªÊ“ªê“ªÞ“ª¹:
+“ÀÌ“Ç×“¿¬“»ê“ÀÚ ".." “´Â “¹ü“À§“¿¬“»ê“ÀÚ“·Î “»ç“¿ë“µÇ“´Â “ÄÁ“ÅØ“½º“Æ®“¿¡ “ÀÇ“ÇØ
+“´Ù“¸¥ “µ¿“ÀÛ“À» “ÇÏ“´Â 2“°³“ÀÇ “¿¬“»ê“ÀÚ“¸¦ “ÇÕ“Ä£ “°Í“ÀÔ“´Ï“´Ù.
+“¸®“½º“Æ® “ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â, “¿Þ“ÂÊ“ÀÇ “°ª“¿¡“¼­ “¿À“¸¥“ÂÊ“ÀÇ “°ª“±î“Áö (1“¾¿ “³ô“Àº “¼ø“À¸“·Î)
+“¼ö“¸¦ “Çì“¾Æ“¸° “°ª“À» “°¡“Áø “¸®“½º“Æ®“¸¦ “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+“¿Þ“ÂÊ“ÀÇ “°ª“ÀÌ “¿À“¸¥“ÂÊ“ÀÇ “°ª“º¸“´Ù “Å¬ “°æ“¿ì“´Â “ºó “¸®“½º“Æ®“¸¦ “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+“¹ü“À§ “¿¬“»ê“ÀÚ“´Â C<foreach (1..10)> “Ã³“·³ “·ç“ÇÁ“¸¦ “»ç“¿ë“ÇÒ “°æ“¿ì“³ª,
+“¹è“¿­“ÀÇ “½½“¶ó“ÀÌ“½º“¿¬“»ê“À» “¼ö“Çà“ÇÒ “¶§ “Æí“¸®“ÇÕ“´Ï“´Ù.
+“Çö“»ó“ÅÂ“¿¡“¼­“´Â C<foreach> “·ç“ÇÁ“ÀÇ “½Ä “¾È“¿¡ “¹ü“À§ “¿¬“»ê“ÀÚ“¸¦ “»ç“¿ë“ÇØ“µµ
+“ÀÏ“½Ã“¹è“¿­“Àº “¸¸“µé“¼ö“¾ø“½À“´Ï“´Ù. “¿¹“Àü“ÀÇ Perl “Àº “¾Æ“·¡“Ã³“·³ “¾²“¸é
+“´ë“·®“ÀÇ “¸Þ“¸ð“¸®“¸¦ “¾²“°Ô“µË“´Ï“´Ù.
 
     for (1 .. 1_000_000) {
 	# code
@@ -1373,8 +1373,8 @@ see below.
 
 =end original
 
-“Ûô’°Ï“æÑ“ß©“í­“ªÏ“¡¢“«Þ“«¸“««“«ë“í»“ÔÑ“«¤“«ó“«¯“«ê“«á“«ó“«È“ªò“ÞÅ“ª¦“ª³“ªÈ“ªÇ“Ùþ“í®“Öª“ªÇ“ªâ“ÔÑ“íÂ“ª·“ªÞ“ª¹“¡£
-“ì¤“ù»“ªò‘²Î“ðÎ“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+“¹ü“À§“¿¬“»ê“ÀÚ“´Â “¸Å“Áö“ÄÃ“ÀÚ“µ¿“Áõ“°¡“¸¦ “»ç“¿ë“ÇÏ“´Â “°Í“À¸“·Î “¹®“ÀÚ“¿­“¿¡“¼­“µµ “µ¿“ÀÛ“ÇÕ“´Ï“´Ù.
+“´Ù“À½“À» “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =begin original
 
@@ -1393,21 +1393,21 @@ two.  In all other regards, "..." behaves just like ".." does.
 
 =end original
 
-“«¹“««“«é“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ÞÅ“ªï“ªì“ª¿“ªÈ“ª­“ªË“ªÏ“¡¢".." “ªÏ‘Õæ˜ºô“ö·“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“ª³“ªÎ“æÑ“ß©“í­“ªÏ“¡¢“«Õ“«ê“«Ã“«×“«Õ“«í“«Ã“«×“ªÎ“ªè“ª¦“ªË 2 “ö·“äÌ“ïÒ“ªÇ“¡¢
-B<sed> “ªä B<awk> “ªä“Òý“ª¯“ªÎ“«¨“«Ç“«£“«¿“ªÇ“ªÎ“ú¼“Ûô’°Ï (“«³“«ó“«Þ) “æÑ“ß©“í­“ªò
-“«¨“«ß“«å“«ì’¡¼“«È“ª¹“ªë“ªâ“ªÎ“ªÈ“ªÊ“ªê“ªÞ“ª¹“¡£
-“ÊÀ‘¡©“ªÎ ".." “æÑ“ß©“í­“ª¬“ª½“ªì“ª¾“ªì“ªË‘¶À“Ø¡“ª·“ªÆ“í»“ÝÂ“ªÎ‘Õæ˜ºô‘×´“÷¾“ªò“Î·“×â“ª·“ªÞ“ª¹“¡£
-“ªÏ“ª¸“ªá“ªÏ“¡¢“ñ§“ù¬“æÑ“ß©“í­“ª¬˜ºô“ªÇ“ª¢“ªë“Êà“¡¢“æÑ“ß©“îï‘Ìå“ªâ˜ºô“ªÈ“ªÊ“ªÃ“ªÆ“ª¤“ªÞ“ª¹“¡£
-“Ûô’°Ï“æÑ“ß©“í­“ªÏ“¡¢“ª¤“ªÃ“ª¿“ªó“ñ§“ù¬“æÑ“ß©“í­“ª¬‘Õæ“ªË“ªÊ“ªë“ªÈ“¡¢“éÓ“ù¬“æÑ“ß©“í­“ª¬‘Õæ“ªÇ“ª¢“ªë“Êà“¡¢
-‘Õæ“ªò“Ú÷“ª¹“ªè“ª¦“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“éÓ“ù¬“æÑ“ß©“í­“ª¬˜ºô“ªË“ªÊ“ªë“ªÈ“¡¢“æÑ“ß©“í­“ªâ˜ºô“ªò“Ú÷“ª¹“ªè“ª¦“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-(“ó­“ªË“Ûô’°Ï“æÑ“ß©“í­“ª¬“øÄ’²Á“ªµ“ªì“ªë“ªÞ“ªÇ“ªÏ“¡¢˜ºô“ªÈ“ªÏ“ªÊ“ªê“ªÞ“ª»“ªó“¡£
-(B<awk> “ªÇ“ªÎ“ªè“ª¦“ªË) ‘Õæ“ªÈ“ªÊ“ªÃ“ª¿“¡¢“ª½“ªÎ“øÄ’²Á“ªÎ“ñé“ªÇ“éÓ“ù¬“æÑ“ß©“í­“ªò“«Æ“«¹“«È“ª·“¡¢
-˜ºô“ªÈ“ª¹“ªë“ª³“ªÈ“ª¬“ªÇ“ª­“ªÞ“ª¹“ª¬“¡¢1 “Óø“ªÏ‘Õæ“ªò“Ú÷“ª¹“ª³“ªÈ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-B<sed> “ªÇ“ªÎ“ªè“ª¦“ªË“¡¢“ó­“ªË“øÄ’²Á“ªµ“ªì“ªë“ªÞ“ªÇ“éÓ“ù¬“æÑ“ß©“í­“ªò“«Æ“«¹“«È“ª·“ª¿“ª¯“ªÊ“ª±“ªì“ªÐ“¡¢
-2 “ËÁ“ªÎ“«É“«Ã“«È“ªÎ“ÓÛ“ªï“ªê“ªË 3 “ªÄ“ªÎ“«É“«Ã“«È ("...") “ªò“ÞÅ“ªÃ“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
-“ª½“ªÎ“öâ“ªÎ“ïÃ“ªÇ“ªÏ“¡¢"..." “ªÏ ".." “ªÈ“ÔÒ’ÍÍ“ªË“òÉ“Ùñ“ª¤“ªÞ“ª¹“£®
+“½º“Ä®“¶ó“ÄÁ“ÅØ“½º“Æ®“¿¡“¼­ “»ç“¿ë“µÉ “¶§“ÀÇ ".." “´Â "“Âü/“°Å“Áþ" “°ª“À» “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+“ÀÌ “¿¬“»ê“ÀÚ“´Â “ÇÃ“¸³“ÇÃ“·Ó“°°“ÀÌ 2“°ª“ÀÇ “¾È“Á¤“À¸“·Î 
+B<sed> “³ª B<awk> “³ª “¸¹“Àº “¿¡“µð“ÅÍ“°°“ÀÌ 
+“Çà“¹ü“À§(“ÄÞ“¸¶) “¿¬“»ê“ÀÚ“¸¦ “¿¡“¹Ä“·¹“ÀÌ“Æ® “ÇÏ“´Â “°Í“ÀÔ“´Ï“´Ù.
+“°¢“°¢“ÀÇ ".." “¿¬“»ê“ÀÚ“°¡ “µ¶“¸³“ÇØ“¼­ “ÀÚ“½Å“ÀÇ "“Âü/“°Å“Áþ" “»ó“ÅÂ“¸¦ “°ü“¸®“ÇÕ“´Ï“´Ù.
+“Ã³“À½“Àº “¿Þ“ÂÊ “¿¬“»ê“ÀÚ“°¡ "“°Å“Áþ"“ÀÏ “°æ“¿ì, “¿¬“»ê“ÀÚ“Ã¼“µµ "“°Å“Áþ"“ÀÌ “µË“´Ï“´Ù.
+“¹ü“À§“¿¬“»ê“ÀÚ“´Â “ÀÏ“´Ü “¿Þ“ÂÊ “¿¬“»ê“ÀÚ“°¡ "“Âü"“ÀÌ “µÇ“¸é, “¿À“¸¥“ÂÊ “¿¬“»ê“ÀÚ“°¡ "“Âü"“ÀÏ “°æ“¿ì
+"“Âü"“À» “¹Ý“È¯“ÇÏ“°Ô “µË“´Ï“´Ù.
+“¿À“¸¥“ÂÊ “¿¬“»ê“ÀÚ“°¡ "“°Å“Áþ"“ÀÌ “µÇ“¸é, “¿¬“»ê“ÀÚ“µµ "“°Å“Áþ"“À» “¹Ý“È¯“ÇÏ“°Ô “µË“´Ï“´Ù.
+(“´Ù“À½“ÀÇ “¹ü“À§“¿¬“»ê“ÀÚ“°¡ “Æò“°¡“µÇ“±â“±î“Áö“´Â "“°Å“Áþ"“ÀÌ “µÇ“Áö “¾Ê“½À“´Ï“´Ù)
+(B<awk> “¿¡“¼­ “Ã³“·³) "“Âü"“ÀÌ “µÈ, “±× “Æò“°¡ “¾È“¿¡ “¿À“¸¥“ÂÊ “¿¬“»ê“ÀÚ“¸¦ “Å×“½º“Æ®“ÇÏ“°í,
+"“°Å“Áþ"“ÀÌ“¶ó“°í “µÇ“Áö“¸¸, “ÇÑ “¹ø“Àº "“Âü"“À» “¹Ý“È¯“ÇÏ “µË“´Ï“´Ù.
+B<sed> “¿¡“¼­ “Ã³“·³, “´Ù“À½“¿¡ “Æò“°¡“µÇ“±â“±î“Áö “¿À“¸¥“ÂÊ “¿¬“»ê“ÀÚ“¸¦ “Å×“½º“Æ®“ÇÏ“°í “½Í“´Ù“¸é,
+“µÎ “°³“ÀÇ “Á¡ “´ë“½Å“¿¡ 3“°³“ÀÇ “Á¡("...")“À» “»ç“¿ë“ÇØ “ÁÖ“¼¼“¿ä.
+“±× “¿Ü“ÀÇ “Á¡“¿¡“¼­“´Â "..."“´Â ".."“¿Í “°°“Àº “¼ö“Çà“À» “ÇÕ“´Ï“´Ù.
 
 =begin original
 
@@ -1425,17 +1425,17 @@ than 1.
 
 =end original
 
-“éÓ“ù¬“æÑ“ß©“í­“ªÏ“¡¢“æÑ“ß©“í­“ªÎ‘×´“÷¾“ª¬“¡¸˜ºô“¡¹“ªÇ“ª¢“ªë“Êà“ªÏ“øÄ’²Á“ªµ“ªì“ªë“ª³“ªÈ“ª¬“ªÊ“ª¯“¡¢
-“ñ§“ù¬“æÑ“ß©“í­“ªÏ“¡¢“æÑ“ß©“í­“ªÎ‘×´“÷¾“ª¬“¡¸‘Õæ“¡¹“ªÇ“ª¢“ªë“Êà“ªÏ“øÄ’²Á“ªµ“ªì“ªë“ª³“ªÈ“ª¬“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“éÐ“à»“â÷“êÈ“ªÏ“¡¢|| “ªÈ && “ªÎ“á´“ª·“ù»“ªÇ“ª¹“¡£
-˜ºô“ªÈ“ª·“ªÆ“ªÏ“Íö“Ùþ“í®“Öª“ª¬“Ú÷“ªµ“ªì“¡¢
-‘Õæ“ªÈ“ª·“ªÆ“ªÏ (1 “ª«“ªé“ã·“ªÞ“ªë) “â÷“ªË˜­å“ªó“ªÀ‘Êý“ö·“ª¬“Ú÷“ªµ“ªì“ªÞ“ª¹“¡£
-“ª³“ªÎ“÷×“ª·“Ûã‘ºÅ“ªÏ“¡¢“ãæ“ª¿“ªË“Ûô’°Ï“ª¬“ã·“ªÞ“ªë“ª´“ªÈ“ªË“«ê“«»“«Ã“«È“ªµ“ªì“ªÞ“ª¹“¡£
-“Ûô’°Ï“ªÎ“õÌ“ý­“ªÎ‘Êý“í®“ªË“ªÏ“¡¢“Ùþ“í®“Öª "E0" “ª¬“ªª“Í¶“ªË“ªÄ“ª±“ªé“ªì“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢‘Êý“ö·“ªÈ“ª·“ªÆ“ªÏ“ù¼“ªÎ“ç¯“úÂ“ªâ“ª¢“ªê“ªÞ“ª»“ªó“ª¬“¡¢“Ûô’°Ï“ªÎ“ðû“ªï“ªê“ªÇ“ù¼“ª«“÷å“Ü¬“ªÊ“ª³“ªÈ“ªò
-“ª·“ª¿“ª¤“íÞ“ùê“ªË“¡¢“ÙÍ“ìÔ“ªÈ“ª·“ªÆ“ÞÅ“ª¦“ª³“ªÈ“ª¬“ªÇ“ª­“ªÞ“ª¹“¡£
-“Ûô’°Ï“ªÎ“ã·“ªÞ“ªê“ªÇ“ù¼“ª«“ª·“ª¿“ª¤“íÞ“ùê“ªË“ªÏ“¡¢“÷×“ª·“Ûã‘ºÅ“ª¬ 1 “ªè“ªê“ªâ“ÓÞ“ª­“ª¯“ªÊ“ªë“ªÎ“ªò
-“Óâ“ªÃ“ªÆ“ª¤“ªì“ªÐ“ªè“ª¤“ªÇ“ª·“ªç“ª¦“¡£
+“¿À“¸¥“ÂÊ “¿¬“»ê“ÀÚ“´Â “¿¬“»ê“ÀÚ“ÀÇ “»ó“ÅÂ“°¡ "“°Å“Áþ"“ÀÏ “¶§“´Â “Æò“°¡“µÇ“Áö “¾Ê“°í,
+“¿Þ“ÂÊ “¿¬“»ê“ÀÚ“´Â “¿¬“»ê“ÀÚ“ÀÇ “»ó“ÅÂ“°¡ "“Âü"“ÀÏ “¶§“´Â “Æò“°¡“µÇ“Áö “¾Ê“½À“´Ï“´Ù.
+“¿ì“¼±“¼ø“À§“´Â, ||“´Â && “ÀÇ “¾à“°£ “¹Ø“ÀÔ“´Ï“´Ù.
+"“°Å“Áþ"“¿¡“¼­“´Â “ºó “¹®“ÀÚ“¿­“ÀÌ “¹Ý“È¯“µÇ“°í,
+"“Âü"“¿¡“¼­“´Â (1 “¿¡“¼­ “½Ã“ÀÛ“ÇÔ) “¼ø“¼­“¿¡ “µû“¶ó “³ª“¿­“µÈ “¼ý“ÀÚ“°ª“ÀÌ “¹Ý“È¯“µË“´Ï“´Ù. 
+“ÀÌ “½Ã“Äö“½º “³Ñ“¹ö“´Â, “»õ“·Î“¿î “¹ü“À§“°¡ “½Ã“ÀÛ“µÇ“´Â “°Í“¿¡ “¸®“¼Â“µË“´Ï“´Ù.
+“¹ü“À§“ÀÇ “¸¶“Áö“¸· “¼ý“ÀÚ“¿¡“´Â, “¹®“ÀÚ“¿­ "E0" “°¡ “¸¶“Áö“¸·“¿¡ “ºÙ“°Ô“µË“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¼ý“ÀÚ“°ª“À¸“·Î“½á“´Â “¾î“¶² “¿µ“Çâ“µµ “¾ø“Áö“¸¸, “¹ü“À§“ÀÇ “³¡“¿¡“¼­ “¹º“°¡ “Æ¯“º°“ÇÑ “°Í“À»
+“ÇÏ“°í “½Í“Àº “°æ“¿ì“¿¡“´Â “Ç¥“Áö“·Î“½á “»ç“¿ë“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
+“¹ü“À§“ÀÇ “½Ã“ÀÛ“¿¡“¼­ “¹º“°¡ “ÇÏ“°í “½Í“À» “°æ“¿ì“´Â “½Ã“Äö“½º “³Ñ“¹ö“°¡ 1“º¸“´Ù“µµ “Å©“°Ô “µÈ “¼ý“ÀÚ“¸¦
+“°¡“Áö“°í “ÀÖ“À¸“¸é “µË“´Ï“´Ù.
 
 =begin original
 
@@ -1445,8 +1445,8 @@ input line number (the C<$.> variable).
 
 =end original
 
-“«¹“««“«é“ªÎ ".." “ªÎ“ù¬“æÑ“ß©“í­“ª¬“ïÒ‘Êý“øú“úÞ“ªÇ“ª¢“ªë“ªÈ“ª­“ªÏ“¡¢“ª½“ªÎ“ù¬“æÑ“ß©“í­“ªÏ“äÞ’ÌÛ“ªË“¡¢
-“úÞ“î¤“ªÎ“ìý“Õô“ú¼“Ûã‘ºÅ(’ÊÑ‘Êý C<$.>) “ªÈ“Ôõ“ª·“ª¤(C<==>) “íÞ“ùê“ªË‘Õæ“ªÈ“ªÊ“ªê“ªÞ“ª¹“¡£
+“½º“Ä®“¶ó“ÀÇ ".." “ÀÇ “ÇÇ“¿¬“»ê“ÀÚ“°¡ “Æ¯“Á¤“Ç¥“Çö“ÀÏ “°æ“¿ì“´Â, “±× “ÇÇ“¿¬“»ê“ÀÚ“´Â “¾Ï“¹¬“Àû“À¸“·Î
+“Çö“Àç“ÀÇ “ÀÔ“·Â“Çà“¹ø“È£(“º¯“¼ö C<$.> “¿Í “°°“Àº (C<==>) “°æ“¿ì“¿¡“´Â "“Âü"“ÀÌ “µË“´Ï“´Ù.
 
 =begin original
 
@@ -1461,14 +1461,13 @@ using their integer representation.
 
 =end original
 
-“ªÈ“ªÆ“ªâ“á¬“ª«“ª¤“ü¥“ªò“ª¹“ªë“ªÈ“¡¢“Ýï“Îò“ªÏ’¼Â“ð·“ªË“ªÏ C<int(EXPR) == int(EXPR)> “ªÇ“ª¹“ª¬“¡¢
-“ª³“ªì“ªÏ“Ý©“ÔÑ“á³‘Êý“ïÃ‘Êý“ªò“ÞÅ“ª¦“ªÈ“ª­“ªË“ªÀ“ª±“Ùý“ð¹“ªË“ªÊ“ªê“ªÞ“ª¹; “îñ“ªÎ“Ó«“Õª“ªÇ“ÑÀ“âû“ª·“ª¿“ªè“ª¦“ªË
-“Ù¥“ãÆ“îÜ“ªË C<$.> “ªò“ÞÅ“ªÃ“ª¿“ªÈ“ª­“¡¢“Ýï“Îò“ªÏ C<int(EXPR) == int($.)> “ªÈ“ªÊ“ªê“¡¢
-C<$.> “ªË“Ý©“ÔÑ“á³‘Êý“ïÃ‘Êý“ª¬“«»“«Ã“«È“ªµ“ªì“¡¢“«Õ“«¡“«¤“«ë“ª«“ªé’ÆÉ“ªß’¹þ“ªß“ªò“ú¼“ªï“ªÊ“ª¤“íÞ“ùê“ªË“ªÎ“ªß
-“Ùý“ð¹“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ªµ“ªé“ªË“¡¢C<"span" .. "spat"> “ªä C<2.18 .. 3.14> “ªÏ“¡¢“ª½“ªì“ª¾“ªì“ªÎ“«ª“«Ú“«é“«ó“«É“ª¬
-“ïÚ‘Êý“øú“úÞ“ªò“ÞÅ“ªÃ“ªÆ“øÄ’²Á“ªµ“ªì“ªë“ª¿“ªá“¡¢“«¹“««“«é“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“ØÐ“ªß“ªÉ“ªª“ªê“ªÎ“Ì¿“Íý“ªË
-“ªÊ“ªê“ªÞ“ª»“ªó“¡£
+“Á» “´õ “ÀÚ“¼¼“ÇÏ“°Ô “¾ê“±â“ÇÏ“¸é, “ºñ“±³“´Â “½Ç“Á¦“·Î C<int(EXPR) == int(EXPR)> “ÀÌ“Áö“¸¸,
+“ÀÌ“°Í“Àº “ºÎ“µ¿“¼Ò“¼ö“Á¡“À» “»ç“¿ë“ÇÒ “¶§“¿¡“¸¸ “¹®“Á¦“°¡ “µË“´Ï“´Ù. “¾Õ“ÀÇ “´Ü“¶ô“¿¡“¼­ “±â“¼ú“ÇÑ “°Í“Ã³“·³
+“¸í“½Ã“Àû“À¸“·Î C<$.>“À» “»ç“¿ë“ÇÑ “°æ“¿ì, “ºñ“±³“´Â C<int(EXPR) == int($.)> “°¡ “µÇ“°í,
+C<$.> “¿¡ “ºÎ“µ¿“¼Ò“¼ö“Á¡“ÀÌ “µé“¾î“°¡“¸é, “ÆÄ“ÀÏ“¿¡“¼­ “ÀÐ“¾î“µé“ÀÌ“Áö “¾Ê“À» “°æ“¿ì“¸¸ “¹®“Á¦“°¡ “µË“´Ï“´Ù.
+“°Å“±â“¿¡, C<"span" .. "spat"> “ÀÌ“³ª C<2.18 .. 3.14> “´Â 
+“°¢“°¢“ÀÇ “ÇÇ“¿¬“»ê“ÀÚ“°¡ “Á¤“¼ö“Ç¥“Çö“À» “»ç“¿ë“ÇØ “Æò“°¡“µÇ“±â“¿¡, “½º“Ä®“¶ó “ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â
+“¹Ù“¶ó“´ø “´ë“·Î“ÀÇ “°á“°ú“°¡ “³ª“¿À“Áö “¾Ê“½À“´Ï“´Ù.
 
 =begin original
 
@@ -1484,7 +1483,7 @@ As a scalar operator:
 
 =end original
 
-“«¹“««“«é“æÑ“ß©“í­“ªÈ“ª·“ªÆ:
+“½º“Ä®“¶ó“¿¬“»ê“ÀÚ“·Î“½á:
 
     if (101 .. 200) { print; } # print 2nd hundred lines, short for
                                #   if ($. == 101 .. $. == 200) ...
@@ -1515,7 +1514,7 @@ the two range operators:
 
 =end original
 
-“ì¤“ù»“ªÏ“ì£“ªÄ“ªÎ“Ûô’°Ï“æÑ“ß©“í­“ªÎ“êÞ“ª¤“ªò“ãÆ“ª¹’Ã±“âí“ªÊ“ÖÇ“ªÇ“ª¹:
+“¾Æ“·¡“´Â “µÎ“°³“ÀÇ “¹ü“À§“¿¬“»ê“ÀÚ“ÀÇ “´Ù“¸§“Á¡“À» “³ª“Å¸“³»“´Â “´Ü“¼ø“ÇÑ “¿¹“ÀÔ“´Ï“´Ù:
 
     @lines = ("   - Foo",
               "01 - Bar",
@@ -1536,8 +1535,8 @@ the range operator is changed to C<...>, it will also print the
 
 =end original
 
-“ª³“ªÎ“«×“«í“«°“«é“«à“ªÏ "Bar" “ªò“ùß“ªà“ú¼“ªÀ“ª±“ªò“øú“ãÆ“ª·“ªÞ“ª¹“¡£
-“Ûô’°Ï“æÑ“ß©“í­“ªò C<...> “ªË’ÊÑ“ÌÚ“ª¹“ªë“ªÈ“¡¢"Baz" “ªÎ“ú¼“ªâ“øú“ãÆ“ª·“ªÞ“ª¹“¡£
+“ÀÌ “ÇÁ“·Î“±×“·¥“Àº "Bar" “¸¦ “Æ÷“ÇÔ“ÇÑ “ÁÙ“¸¸ “Ç¥“½Ã“ÇÕ“´Ï“´Ù.
+“¹ü“À§“¿¬“»ê“ÀÚ“´Â C<...> “·Î “¹Ù“²Ù“¸é, "Baz"“ÀÇ “ÁÙ“¸¸ “Ç¥“½Ã“ÇÕ“´Ï“´Ù.
 
 =begin original
 
@@ -1559,9 +1558,9 @@ can say
 
 =end original
 
-(“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÎ) “Ûô’°Ï“æÑ“ß©“í­“ªÏ“¡¢“ù¬“æÑ“ß©“í­“ª¬“Ùþ“í®“Öª“ªÇ“ª¢“ªë“ªÈ“ª­“ªË“ªÏ“¡¢
-“«Þ“«¸“««“«ë“«¤“«ó“«¯“«ê“«á“«ó“«È“ªÎ“Ñ¦“Òö“ªò“ÞÅ“ª¤“ªÞ“ª¹“¡£
-“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ßö“ª¯“ªÈ:
+(“¸®“½º“Æ® “ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“ÀÇ) “¹ü“À§“¿¬“»ê“ÀÚ“´Â “ÇÇ“¿¬“»ê“ÀÚ“°¡ “¹®“ÀÚ“¿­“ÀÏ “¶§“¿¡“´Â
+“¸Å“Áö“ÄÃ “Áõ“°¡“ÀÇ “±â“´É“À» “»ç“¿ë“ÇÕ“´Ï“´Ù.
+“¾Æ“·¡“¿Í “°°“ÀÌ “¾²“¸é :
 
     @alphabet = ('A' .. 'Z');
 
@@ -1571,7 +1570,7 @@ to get all normal letters of the English alphabet, or
 
 =end original
 
-“çÈ“åÞ“ªÎ“ÓÞ“Ùþ“í®“ª¹“ªÙ“ªÆ“ªò“Ôð“ªé“ªì“ªÞ“ª¹“ª·:
+“¿µ“¾î“ÀÇ “´ë“¹®“ÀÚ “Àü“ºÎ“¸¦ “¾ò“À» “¼ö “ÀÖ“°í:
 
     $hexdigit = (0 .. 9, 'a' .. 'f')[$num & 15];
 
@@ -1581,7 +1580,7 @@ to get a hexadecimal digit, or
 
 =end original
 
-“ªÈ“ßö“ª±“ªÐ“¡¢16 “òä“ªÎ‘Êý“í®“ª¬“Ôð“ªé“ªì“ªÞ“ª¹“ª·“¡¢
+“¶ó“°í “¾²“¸é, 16“Áø“¼ö“¸¦ “¾ò“À» “¼ö “ÀÖ“°í,
 
     @z2 = ('01' .. '31');  print $z2[$mday];
 
@@ -1591,7 +1590,7 @@ to get dates with leading zeros.
 
 =end original
 
-“ªÈ“ª¹“ªì“ªÐ“¡¢0 “Üõ“ª­“ªÎ“ìí“Üõ“ª¬“Ôð“ªé“ªì“ªÞ“ª¹“¡£
+“·Î “ÇÏ“¸é, 0“ÀÌ “ºÙ“Àº “³¯“Â¥“¸¦ “¾ò“À» “¼ö “ÀÖ“½À“´Ï“´Ù.
 
 =begin original
 
@@ -1601,10 +1600,10 @@ be longer than the final value specified.
 
 =end original
 
-“«Þ“«¸“««“«ë“«¤“«ó“«¯“«ê“«á“«ó“«È“ªË“ªè“ªÃ“ªÆ“Ôð“ªé“ªì“ªë“ö·“ªÎ“ñé“ªË“ò¦“ïÒ“ª·“ª¿“õÌ“ðû“ö·“ªË
-“ªÁ“ªç“ª¦“ªÉ“ìé“öÈ“ª¹“ªë“ªâ“ªÎ“ª¬“Ì¸“ªÄ“ª«“ªé“ªÊ“ª¤“ªè“ª¦“ªÊ“íÞ“ùê“ªË“ªÏ“¡¢
-“«Þ“«¸“««“«ë“«¤“«ó“«¯“«ê“«á“«ó“«È“ªË“ªè“ªÃ“ªÆ“Ôð“ªé“ªì“ªë“ó­“ªÎ“ö·“ªÎ“Ùþ“í®“Öª“íþ“ª¬“¡¢
-“õÌ“ðû“ö·“ªÈ“ª·“ªÆ“ò¦“ïÒ“ª·“ª¿“ö·“ªÎ“ªâ“ªÎ“ªè“ªê“íþ“ª¯“ªÊ“ªë“ªÞ“ªÇ“«¤“«ó“«¯“«ê“«á“«ó“«È“ª¬’Â³“ª±“ªé“ªì“ªÞ“ª¹“¡£
+“¸Å“Áö“ÄÃ“Áõ“°¡“¿¡ “ÀÇ“ÇØ “¾ò“À» “¼ö “ÀÖ“´Â “°ª “Áß“¿¡ “Áö“Á¤“ÇÑ “ÃÖ“Á¾“°ª“¿¡ “Á¤“È®“È÷
+“ÀÏ“Ä¡“ÇÏ“´Â “°Í“ÀÌ “º¸“ÀÌ“Áö“¾Ê“µµ“·Ï “ÇÒ “°æ“¿ì“¿¡“´Â,
+“¸Å“Áö“ÄÃ “Áõ“°¡“¿¡“ÀÇ“ÇØ “¾ò“À» “¼ö “ÀÖ“´Â “´Ù“À½“ÀÇ “°ª“ÀÇ “¹®“ÀÚ“¿­“±æ“ÀÌ“°¡
+“ÃÖ“Á¾“°ª“À¸“·Î“½á “Áö“Á¤“µÈ “°ª“º¸“´Ù “±æ “¶§ “Áõ“°¡“°¡ “°è“¼Ó“µË“´Ï“´Ù.
 
 =begin original
 
@@ -1630,7 +1629,7 @@ To get lower-case greek letters, use this instead:
 
 =end original
 
-“á³“Ùþ“í®“ªÎ“«®“«ê“«·“«ã“Ùþ“í®“ªò“Ôð“ªë“ª¿“ªá“ªË“ªÏ“¡¢“ÓÛ“ªï“ªê“ªË“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤:
+“¼Ò“¹®“ÀÚ“ÀÇ “±×“¸®“½º“¹®“ÀÚ“¸¦ “¾ò“±â “À§“ÇØ“¼­“´Â, “¾Æ“·¡“¿Í “°°“ÀÌ “ÇØ“ÁÖ“¼¼“¿ä.
 
     my @greek_small =  map { chr } ( ord("\N{alpha}") .. ord("\N{omega}") );
 
@@ -1641,15 +1640,15 @@ return two elements in list context.
 
 =end original
 
-“ª½“ªì“ª¾“ªì“ªÎ“«ª“«Ú“«é“«ó“«É“ªÏ“ïÚ‘Êý“ªÎ“û¡“ªÇ“øÄ’²Á“ªµ“ªì“ªë“ªÎ“ªÇ“¡¢C<2.18 .. 3.14> “ªÏ
-“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“ì£“ªÄ“ªÎ“é©“áÈ“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
+“°¢“°¢“ÀÇ “ÇÇ“¿¬“»ê“ÀÚ“´Â “Á¤“¼ö“ÀÇ “Çü“ÅÂ“¿¡“¼­ “Æò“°¡“µÇ“±â“¶§“¹®“¿¡ C<2.18 .. 3.14> “´Â
+“¸®“½º“Æ® “ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â “µÎ“°³“ÀÇ “¿ä“¼Ò“°¡ “¹Ý“È¯“ÇÕ“´Ï“´Ù.
 
     @list = (2.18 .. 3.14); # same as @list = (2 .. 3);
 
 =head2 Conditional Operator
 X<operator, conditional> X<operator, ternary> X<ternary> X<?:>
 
-(‘Ìõ“Ëì“æÑ“ß©“í­)
+(“Á¶“°Ç “¿¬“»ê“ÀÚ)
 
 =begin original
 
@@ -1660,10 +1659,10 @@ is returned.  For example:
 
 =end original
 
-“ß²“ú£“æÑ“ß©“í­“ªÎ "?:" “ªÏ“¡¢C “ªÎ“íÞ“ùê“ªÈ“ÔÒ“ª¸‘Ìõ“Ëì“æÑ“ß©“í­“ªÇ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢if-then-else “ªÎ“ªè“ª¦“ªË’Æ¯“ª­“ªÞ“ª¹“¡£
-"?" “ªÎ“îñ“ªÎ“ìÚ‘Êý“ª¬‘Õæ“ªÇ“ª¢“ªì“ªÐ ":" “ªÎ“îñ“ªÎ“ìÚ‘Êý“ª¬“Ú÷“ªµ“ªì“ªÞ“ª¹“ª¬“¡¢
-‘Õæ“ªÇ“ªÊ“ª±“ªì“ªÐ“¡¢":" “ªÎ“ý­“ªÎ“ìÚ‘Êý“ª¬“Ú÷“ªµ“ªì“ªÞ“ª¹“¡£“ÖÇ:
+“»ï“Ç×“¿¬“»ê“ÀÚ“ÀÇ "?:"“´Â, C “ÀÇ “°æ“¿ì“¿Í “°°“ÀÌ “Á¶“°Ç“¿¬“»ê“ÀÚ“ÀÔ“´Ï“´Ù.
+“ÀÌ“°Í“Àº if-then-ele “¿Í “°°“ÀÌ “¿ò“Á÷“ÀÔ“´Ï“´Ù.
+"?" “ÀÇ “¾Õ“ÀÇ “ÀÎ“¼ö“°¡ "“Âü"“ÀÏ “°æ“¿ì ":" “ÀÇ “¾Õ“ÀÇ “ÀÎ“¼ö“°¡ “¹Ý“È¯“µÇ“Áö“¸¸,
+"“Âü"“ÀÌ “µÇ“¸é, ":"“ÀÇ “µÚ“ÀÇ “ÀÎ“¼ö“°¡ “¹Ý“È¯“µË“´Ï“´Ù.
 
     printf "I have %d dog%s.\n", $n,
 	    ($n == 1) ? '' : "s";
@@ -1675,8 +1674,8 @@ or 3rd argument, whichever is selected.
 
 =end original
 
-“«¹“««“«é“«³“«ó“«Æ“«­“«¹“«È“ª«“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ª«“ªÈ“ª¤“ª¦‘×´“üÏ“ªÏ“¡¢
-“àÔ’Âò“ªµ“ªì“ª¿ 2 “Ûã“ÙÍ“ªâ“ª·“ª¯“ªÏ 3 “Ûã“ÙÍ“ªÎ“ìÚ‘Êý“ªË“ªÞ“ªÇ™¡ó“ªï“ªê“ªÞ“ª¹“¡£
+“½º“Ä®“¶ó “È¤“Àº “¸®“½º“Æ® “ÄÁ“ÅØ“½º“Æ®“ÀÎ“°¡ “ÇÏ“´Â “»ó“È²“Àº
+“¼±“ÅÃ“µÈ 2“¹ø“Â° “È¤“Àº 3“¹ø“Â°“ÀÇ “ÀÎ“¼ö“±î“Áö “Àü“´Þ“µË“´Ï“´Ù.
 
     $a = $ok ? $b : $c;  # get a scalar
     @a = $ok ? @b : @c;  # get an array
@@ -1689,8 +1688,8 @@ legal lvalues (meaning that you can assign to them):
 
 =end original
 
-2 “Ûã“ÙÍ“ªÈ 3 “Ûã“ÙÍ“ªÎ“ìÚ‘Êý‘Ë«“Û°“ª¬“ñ§’ÊÕ“ö· (“ÓÛ“ìý“Ê¦“Òö“ªÈ“ª¤“ª¦“ª³“ªÈ)“ªÇ“ª¢“ªì“ªÐ“¡¢
-“ª³“ªÎ“æÑ“ß©“í­“ªË“ÓÛ“ìý“ªò“ú¼“ªÊ“ª¦“ª³“ªÈ“ªâ“ªÇ“ª­“ªÞ“ª¹:
+2“¹ø“Â° “¿Í 3“¹ø“Â°“ÀÇ “ÀÎ“¼ö “¾ç“ÂÊ“ÀÌ “¿Þ“ÂÊ “°ª(“´ë“ÀÔ“°¡“´É“ÇÑ “°Í)“ÀÏ “°æ“¿ì,
+“ÀÌ “¿¬“»ê“ÀÚ“¿¡ “´ë“ÀÔ“À» “ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
     ($a_or_b ? $a : $b) = $c;
 
@@ -1701,8 +1700,8 @@ without parentheses will get you in trouble.  For example, this:
 
 =end original
 
-“ª³“ªÎ“æÑ“ß©“í­“ªÏ“ÓÛ“ìý“Ê¦“Òö“ªÊ“Ì¿“Íý“ªò“ßæ“ªß“õó“ª¹“ªÎ“ªÇ“¡¢
-“ÎÀ“ûÁ“ªÊ“ª·“ªÇ“ÓÛ“ìý“ªò“ú¼“ª¦“ªÈ“ªª“ª«“ª·“ª¯“ªÊ“ªë“ª«“ªâ“ª·“ªì“ªÞ“ª»“ªó“¡£“ÖÇ“ª¨“ªÐ:
+“ÀÌ “¿¬“»ê“ÀÚ“´Â “´ë“ÀÔ“°¡“´É“ÇÑ “°á“°ú“¸¦ “Ãâ“·Â“ÇÏ“±â“¶§“¹®“¿¡,
+“°ý“È£“°¡“¾ø“ÀÌ“µµ “´ë“ÀÔ“À» “¼ö“Çà“ÇÏ“¸é “ÀÌ“»ó“ÇÏ“°Ô “µÉ“Áö“µµ “¸ð“¸¨“´Ï“´Ù. “¿¹“¸¦ “µé“¾î:
 
     $a % 2 ? $a += 10 : $a += 2
 
@@ -1712,7 +1711,7 @@ Really means this:
 
 =end original
 
-“ªÏ“ì¤“ù»“ªò“ëò“Ú«“ª·:
+“´Â “¾Æ“·¡“¿Í “°°“Àº “ÀÇ“¹Ì“ÀÌ“°í,
 
     (($a % 2) ? ($a += 10) : $a) += 2
 
@@ -1722,7 +1721,7 @@ Rather than this:
 
 =end original
 
-“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ªÏ“ªÊ“ªê“ªÞ“ª»“ªó:
+“¾Æ“·¡“¿Í “°°“ÀÌ“´Â “¾È“µË“´Ï“´Ù.
 
     ($a % 2) ? ($a += 10) : ($a += 2)
 
@@ -1732,7 +1731,7 @@ That should probably be written more simply as:
 
 =end original
 
-“Íð“ªé“ª¯“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ªâ“ªÃ“ªÈ’Ã±“âí“ªË“ßö“ª¯“ªÙ“ª­“ªÇ“ª·“ªç“ª¦:
+“°£“´Ü“È÷ “¾Æ“·¡“¿Í “°°“ÀÌ “¾µ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
     $a += ($a % 2) ? 10 : 2;
 
@@ -1741,7 +1740,7 @@ X<assignment> X<operator, assignment> X<=> X<**=> X<+=> X<*=> X<&=>
 X<<< <<= >>> X<&&=> X<-=> X</=> X<|=> X<<< >>= >>> X<||=> X<//=> X<.=>
 X<%=> X<^=> X<x=>
 
-(“ÓÛ“ìý“æÑ“ß©“í­)
+(“´ë“ÀÔ “¿¬“»ê“ÀÚ)
 
 =begin original
 
@@ -1749,7 +1748,7 @@ X<%=> X<^=> X<x=>
 
 =end original
 
-"=" “ªÏ“÷×“ßÈ“ªÎ“ÓÛ“ìý“æÑ“ß©“í­“ªÇ“ª¹“¡£
+"=" “´Â “º¸“Åë“ÀÇ “´ë“ÀÔ“¿¬“»ê“ÀÚ“ÀÔ“´Ï“´Ù. 
 
 =begin original
 
@@ -1757,7 +1756,7 @@ Assignment operators work as in C.  That is,
 
 =end original
 
-“ÓÛ“ìý“æÑ“ß©“í­“ªÏ C “ªÎ“íÞ“ùê“ªÈ“ÔÒ’ÍÍ“ªÎ’Æ¯“ª­“ªò“ª·“ªÞ“ª¹“¡£“ªÄ“ªÞ“ªê“¡¢
+“´ë“ÀÔ“¿¬“»ê“ÀÚ“´Â C “ÀÇ“°æ“¿ì“¿Í “°°“Àº “¼ö“Çà“À» “ÇÕ“´Ï“´Ù. “Áï,
 
     $a += 2;
 
@@ -1767,7 +1766,7 @@ is equivalent to
 
 =end original
 
-“ªÏ“ì¤“ù»“ªÈ“Ôõ’²Á“ªÇ“ª¹“¡£
+“´Â “¾Æ“·¡“¿Í “°°“½À“´Ï“´Ù.
 
     $a = $a + 2;
 
@@ -1779,9 +1778,9 @@ The following are recognized:
 
 =end original
 
-“ª·“ª«“ª·“¡¢tie() “ªÎ“ªè“ª¦“ªÊ“ªâ“ªÎ“ªÇ“ÑÃ“ª³“ªë“ñ§’ÊÕ“ö·“ªÎ“ù¬‘²Î“ðÎ“ªË“ªè“ªë
-“Üù“íÂ“éÄ“ª¬ 2 “üÞ“ÑÃ“ª³“ªë“ª³“ªÈ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“öâ“ªÎ“ÓÛ“ìý“æÑ“ß©“ªâ“ÔÒ’ÍÍ“ªË’Æ¯“ª­“ªÞ“ª¹“¡£“ì¤“ù»“ªÎ“ªâ“ªÎ“ª¬“ìã“ãÛ“ªµ“ªì“ªÞ“ª¹:
+“±×“·¯“³ª tie() “°°“Àº “°Í“¿¡“¼­ “¹ß“»ý“ÇÏ“´Â “¿Þ“ÂÊ “°ª“ÀÇ “ÇÇ“Âü“Á¶“¿¡ “ÀÇ“ÇÑ
+“ºÎ“ÀÛ“¿ë“ÀÌ “µÎ “¹ø “¹ß“»ý“ÇÏ“´Â “°æ“¿ì“´Â “¾ø“½À“´Ï“´Ù.
+“´Ù“¸¥ “´ë“ÀÔ“¿¬“»ê“µµ “°°“½À“´Ï“´Ù. 
 
     **=    +=    *=    &=    <<=    &&=
            -=    /=    |=    >>=    ||=
@@ -1795,8 +1794,7 @@ of assignment.
 
 =end original
 
-“«°“«ë’¡¼“«×“ÝÂ“ª±“ª·“ªÆ“ª¢“ªê“ªÞ“ª¹“ª¬“¡¢“ª³“ªì“ªé“ªÏ“ª¤“ªº“ªì“ªâ“ÓÛ“ìý“æÑ“ß©“í­“ªÈ“ª·“ªÆ
-“ÔÒ“ª¸“éÐ“à»“â÷“êÈ“ªÈ“ªÊ“ªÃ“ªÆ“ª¤“ªÞ“ª¹“¡£
+“±×“·ì“À» “³ª“´³“Áö“¸¸, “ÀÌ“°Í“µé“Àº “´ë“ÀÔ“¿¬“»ê“ÀÚ“¿Í “°°“Àº “¿ì“¼±“¼ø“À§“ÀÔ“´Ï“´Ù.
 
 =begin original
 
@@ -1807,10 +1805,10 @@ for modifying a copy of something, like this:
 
 =end original
 
-C “ªÈ“êÞ“ªÃ“ªÆ“¡¢“«¹“««“«é“ÓÛ“ìý“æÑ“ß©“í­“ªÏ“êó’¸ú“ªÊ“ñ§’ÊÕ“ö·“ªò“íÂ“ªê“õó“ª·“ªÞ“ª¹“¡£
-“ÓÛ“ìý“ªò“áó“ïá“ª¹“ªë“ª³“ªÈ“ªÏ“¡¢“ÓÛ“ìý“ªò“ú¼“ªÊ“ªÃ“ªÆ“ª«“ªé“¡¢“ª½“ªÎ“ÓÛ“ìý“ªµ“ªì“ª¿’ÊÑ‘Êý“ªò“áó“ïá“ª¹“ªë“ªÎ“ªÈ
-“ÔÒ“ª¸“ª³“ªÈ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ù¼“ª«“ªÎ“«³“«Ô’¡¼“ªò’ÊÑ“ÌÚ“ª·“ª¿“ª¤“ªÈ“ª­“ªË“øµ“××“ªÇ“ª¹:
+C “¿Í“´Þ“¸® “½º“Ä®“¶ó“´ë“ÀÔ“¿¬“»ê“ÀÚ“´Â “À¯“È¿“ÇÑ “ÁÌ“ÂÊ “°ª“À» “¸¸“µé“¾î“³À“´Ï“´Ù.
+“´ë“ÀÔ“À» “¼ö“Á¤“ÇÏ“´Â “°Í“Àº “´ë“ÀÔ“À» “ÇÏ“°í“³­ “µÚ, “±× “´ë“ÀÔ“µÈ “º¯“¼ö“¸¦ “¼ö“Á¤“ÇÏ“´Â “°Í“°ú
+“°°“½À“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¾Æ“·¡“Ã³“·³ “¹º“°¡“ÀÇ “º¹“»ç“Ã¼“¸¦ “º¯“°æ“ÇÏ“°í “½Í“À» “¶§ “Æí“¸®“ÇÕ“´Ï“´Ù.
 
     ($tmp = $global) =~ tr [A-Z] [a-z];
 
@@ -1820,7 +1818,7 @@ Likewise,
 
 =end original
 
-“ÔÒ’ÍÍ“ªË“¡¢
+“ÀÌ“Ã³“·³,
 
     ($a += 2) *= 3;
 
@@ -1830,7 +1828,7 @@ is equivalent to
 
 =end original
 
-“ªÏ“ì¤“ù»“ªÈ“ÔÒ“Ôõ“ªÇ“ª¹“¡£
+“´Â “¾Æ“·¡“¿Í “°°“½À“´Ï“´Ù.
 
     $a += 2;
     $a *= 3;
@@ -1844,14 +1842,14 @@ side of the assignment.
 
 =end original
 
-“ÔÒ’ÍÍ“ªË“¡¢“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÎ“«ê“«¹“«È“ªØ“ªÎ“ÓÛ“ìý“ªÏ“ÓÛ“ìý“Ê¦“Òö“ªÊ“ñ§’ÊÕ“ö·“ªÎ“«ê“«¹“«È“ªÈ“ªÊ“ªê“¡¢
-“«¹“««“«é“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÎ“«ê“«¹“«È“ªØ“ªÎ“ÓÛ“ìý“ªÏ“ÓÛ“ìý“ªÎ“éÓ“ö°“ªÎ“ãÒ“ªÇ“íÂ“à÷“ªµ“ªì“ª¿
-“é©“áÈ“ªÎ‘Êý“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
+“ÀÌ“¿Í “°°“ÀÌ “¸®“½º“Æ®“ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“ÀÇ “¸®“½º“Æ®“¿¡“ÀÇ “´ë“ÀÔ“Àº “´ë“ÀÔ“°¡“´É“ÇÑ “¿Þ“ÂÊ “°ª“ÀÇ
+“¸®“½º“Æ®“¿Í “°°“°Ô “½º“Ä®“¶ó“ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“ÀÇ “¸®“½º“Æ®“¿¡“ÀÇ “´ë“ÀÔ“Àº “´ë“ÀÔ“ÀÇ “¿À“¸¥“ÂÊ“ÀÇ “½Ä“À¸“·Î
+“ÀÛ“¼º“µÈ “¿ä“¼Ò“ÀÇ “°ª“À» “¹Ý“È¯“ÇÕ“´Ï“´Ù.
 
 =head2 Comma Operator
 X<comma> X<operator, comma> X<,>
 
-(“«³“«ó“«Þ“æÑ“ß©“í­)
+(“ÄÞ“¸¶ “¿¬“»ê“ÀÚ)
 
 =begin original
 
@@ -1861,10 +1859,10 @@ argument and returns that value.  This is just like C's comma operator.
 
 =end original
 
-“ì£“ú£“æÑ“ß©“í­“ªÎ "," “ªÏ“«³“«ó“«Þ“æÑ“ß©“í­“ªÇ“ª¹“¡£
-“«¹“««“«é“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“ª½“ªÎ“ñ§“ìÚ‘Êý“ªò“øÄ’²Á“ª·“¡¢“ª½“ªÎ“ö·“ªò“Þ×“ªÆ“ªÆ“¡¢
-“ª½“ªì“ª«“ªé“éÓ“ìÚ‘Êý“ªò“øÄ’²Á“ª·“¡¢“ª½“ªÎ“ö·“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“ªÁ“ªç“ª¦“ªÉ“¡¢C “ªÎ“«³“«ó“«Þ“æÑ“ß©“í­“ªÈ“ÔÒ“ª¸“ªÇ“ª¹“¡£
+“ÀÌ“Ç×“¿¬“»ê“ÀÚ“ÀÎ "," “´Â “ÄÞ“¸¶“¿¬“»ê“ÀÚ“ÀÔ“´Ï“´Ù.
+“½º“Ä®“¶ó “ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â “±× “¿Þ“ÂÊ“ÀÎ“¼ö“¸¦ “Æò“°¡“ÇØ “±× “°ª“À» “¹ö“¸®“°í,
+“¿À“¸¥“ÂÊ “ÀÎ“¼ö“¸¦ “Æò“°¡“ÇØ, “±× “°ª“À» “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+C“ÀÇ “ÄÞ“¸¶ “¿¬“»ê“ÀÚ“¿Í “°°“½À“´Ï“´Ù.
 
 =begin original
 
@@ -1874,9 +1872,9 @@ from left to right.
 
 =end original
 
-“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“¡¢“ª³“ªì“ªÏ’Ã±“ªË“«ê“«¹“«È“ìÚ‘Êý“ªÎ‘Çø“ï·“ªê“Ùþ“í®“ªÇ“¡¢
-‘Ë«“Û°“ªÎ“ìÚ‘Êý“ªò“ª½“ªÎ“«ê“«¹“«È“ªË’ÁÞ“ìý“ª¹“ªë’Æ¯“ª­“ª¬“ª¢“ªê“ªÞ“ª¹“¡£
-“ª³“ªì“ªé“ªÎ“ìÚ‘Êý“ªâ“éÓ“ª«“ªé“ñ§“ªË“øÄ’²Á“ªµ“ªì“ªÞ“ª¹“¡£
+“¸®“½º“Æ®“ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â “´Ü“¼ø“ÇÑ “¸®“½º“Æ® “ÀÎ“¼ö“ÀÇ “¿µ“¿ª“³ª“´®“¹®“ÀÚ“·Î
+“¾ç“ÂÊ“ÀÇ “ÀÎ“¼ö“À» “±× “¸®“½º“Æ®“¿¡ “»ð“ÀÔ“ÇÕ“´Ï“´Ù.
+“ÀÌ“·± “ÀÎ“¼ö“µµ “¿À“¸¥“ÂÊ“¿¡“¼­ “¿Þ“ÂÊ“À¸“·Î “Æò“°¡“µË“´Ï“´Ù.
 
 =begin original
 
@@ -1887,9 +1885,9 @@ considered a constant or function call.
 
 =end original
 
-C<< => >> “æÑ“ß©“í­“ªÏ“«³“«ó“«Þ“æÑ“ß©“í­“ªÎ“ÔÒ“ëù“åÞ“ªÇ“ª¹“ª¬“¡¢(5.001 “ì¤“Ë½)“ñ§’ÊÕ“ö·“ªÎ’Ã±“åÞ
-(’Ã±“åÞ“Ùþ“í®“ªÇ“Ï°“à÷“ªµ“ªì“ªë“îï‘Ìå)“ªò“ù±“ªº“Ùþ“í®“Öª“ªÈ“ª·“ªÆ“Ðâ“ª¦“ªÈ“ª¤“ª¦’¸ú“Íý“ªâ“ª¢“ªê“ªÞ“ª¹“¡£
-“ª³“ªì“ªË“ªÏ“öâ“ªÎ“íÞ“á¶“ªÇ“ªÏ“ïÒ‘Êý“ªä’´Ø‘Êý“û¼“ªÓ“õó“ª·“ªÈ“ª·“ªÆ“Ðâ“ªï“ªì“ªë’Ã±“åÞ“ªò“ùß“ªß“ªÞ“ª¹“¡£
+C<< => >> “¿¬“»ê“ÀÚ“´Â “ÄÞ“¸¶ “¿¬“»ê“ÀÚ“ÀÇ “µ¿“ÀÇ“¾î“ÀÌ“Áö“¸¸, (5.001 “ÀÌ“ÈÄ) “ÁÂ“º¯“Ä¡“ÀÇ “´Ü“¾î
+(“´Ü“¾î“¹®“ÀÚ“·Î “±¸“¼º“µÈ “Àü“Ã¼) “¸¦ “¸¸“µå“½Ã “¹®“ÀÚ“¿­“·Î“½á “Ãë“±Þ“ÇÏ“´Â “È¿“°ú“°¡ “ÀÖ“½À“´Ï“´Ù.
+“ÀÌ“°Í“¿¡“´Â “´Ù“¸¥ “°÷“¿¡“¼­“´Â “Á¤“ÇØ“Áø “°ª“ÀÌ“³ª “ÇÔ“¼ö“È£“Ãâ“·Î“½á “Ãë“±Þ“µÇ“´Â “´Ü“¾î“µµ “Æ÷“ÇÔ“µË“´Ï“´Ù.
 
     use constant FOO => "something";
 
@@ -1901,7 +1899,7 @@ is equivalent to:
 
 =end original
 
-“ªÏ“¡¢“ì¤“ù»“ªÈ“Ôõ’²Á“ªÇ“ª¹:
+“´Â “¾Æ“·¡“¿Í “°°“½À“´Ï“´Ù.
 
     my %h = ("FOO", 23);
 
@@ -1911,7 +1909,7 @@ It is I<NOT>:
 
 =end original
 
-“ª³“ªì“ªÏ I<“êÞ“ª¤“ªÞ“ª¹>:
+“ÀÌ“°Í“Àº I<“´Ù“¸¨“´Ï“´Ù>:
 
     my %h = ("something", 23);
 
@@ -1922,8 +1920,8 @@ an expression, and then the string value of that is used.
 
 =end original
 
-“ñ§“ö°“ªÎ“ìÚ‘Êý“ª¬’Ã±“åÞ“ªÇ“ªÊ“ª«“ªÃ“ª¿“íÞ“ùê“¡¢“ªÞ“ªº“ªÏ“ãÒ“ªÈ“ª·“ªÆ“ú°’¼á“ªµ“ªì“¡¢“ª½“ªì“ª«“ªé
-“ª½“ªì“ªò“ÞÅ“ªÃ“ª¿“Ùþ“í®“Öª“ö·“ªÈ“ª·“ªÆ“ú°’¼á“ªµ“ªì“ªÞ“ª¹“¡£
+“¿Þ“ÂÊ“ÀÇ “ÀÎ“¼ö“°¡ “´Ü“¾î“°¡ “¾Æ“´Ñ “°æ“¿ì, “¿ì“¼±“Àº “½Ä“À¸“·Î“½á “ÇØ“¼®“µÇ“°í,
+“ÇØ“¼®“µÈ “°ª“À» “»ç“¿ë“ÇÑ “¹®“ÀÚ“¿­“°ª“À¸“·Î“½á “ÇØ“¼®“µË“´Ï“´Ù.
 
 =begin original
 
@@ -1932,8 +1930,8 @@ between keys and values in hashes, and other paired elements in lists.
 
 =end original
 
-C<< => >> “æÑ“ß©“í­“ªÏ“¡¢“«Ï“«Ã“«·“«å“ªÎ“«­’¡¼“ªÈ“ö·“ªä“¡¢“ª½“ªÎ“öâ“ªÎ“«ê“«¹“«È“ñé“ªÎ“ðÚ“ªÈ“ªÊ“ªë
-“é©“áÈ“ªÎ’´Ø“Ìõ“ªò“øú“úÞ“ª¹“ªë“ªÎ“ªË“øµ“××“ªÇ“ª¹“¡£
+C<< => >> “¿¬“»ê“ÀÚ“´Â, “ÇØ“½¬“ÀÇ “Å°“¿Í “°ª“ÀÌ“³ª “±× “¿Ü“ÀÇ “¸®“½º“Æ® “¾È“ÀÇ “¿ä“¼Ò“ÀÇ “°ü“°è“°¡
+“Ç¥“Çö“ÇÏ“´Â “µ¥ “Æí“¸®“ÇÕ“´Ï“´Ù.
 
         %hash = ( $key => $value );
         login( $username => $password );
@@ -1941,7 +1939,7 @@ C<< => >> “æÑ“ß©“í­“ªÏ“¡¢“«Ï“«Ã“«·“«å“ªÎ“«­’¡¼“ªÈ“ö·“ªä“¡¢“ª½“ªÎ“öâ“ªÎ“«ê“«¹“«È“
 =head2 List Operators (Rightward)
 X<operator, list, rightward> X<list operator>
 
-(“«ê“«¹“«È“æÑ“ß©“í­ (“éÓ“Û°“ú¾))
+(“¸®“½º“Æ® “¿¬“»ê“ÀÚ(“¿À“¸¥“ÂÊ“¹æ“Çâ)) 
 
 =begin original
 
@@ -1953,11 +1951,10 @@ operators without the need for extra parentheses:
 
 =end original
 
-“«ê“«¹“«È“æÑ“ß©“í­“ªÎ“éÓ“ö°“ªÎ“ªâ“ªÎ“ªË“ªÈ“ªÃ“ªÆ“¡¢“«ê“«¹“«È“æÑ“ß©“í­“ªÏ“ªÈ“ªÆ“ªâ“î¸“ª¤“éÐ“à»“â÷“êÈ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ª³“ªì“ªË“ªè“ªÃ“ªÆ“«³“«ó“«Þ“ªÇ‘Çø“ï·“ªÃ“ª¿“ãÒ“ªò“«ê“«¹“«È“æÑ“ß©“í­“ªÎ“ìÚ‘Êý“ªÈ“ª·“ªÆ
-“öÇ“ª¯“ª³“ªÈ“ª¬“ªÇ“ª­“ªÞ“ª¹“¡£
-“ª³“ªì“ªè“ªê“ªâ“éÐ“à»“â÷“êÈ“ª¬“î¸“ª¤“ªâ“ªÎ“ªÏ“¡¢“Öå“×â“æÑ“ß©“í­“ªÎ "and", "or", "not" “ªÎ“ªß“ªÇ“¡¢
-“åù“ÝÂ“ªÊ“ÎÀ“ûÁ“ªò“Üõ“ª±“ªÊ“ª¤“«ê“«¹“«È“æÑ“ß©“í­“ªÎ“û¼“ªÓ“õó“ª·“ªò“øÄ’²Á“ª¹“ªë“ª¿“ªá“ªË“ÞÅ“ª¦“ª³“ªÈ“ª¬“ªÇ“ª­“ªÞ“ª¹:
+“¸®“½º“Æ®“¿¬“»ê“ÀÚ“ÀÇ “¿À“¸¥“ÂÊ“ÀÇ “°æ“¿ì, “¸®“½º“Æ® “¿¬“»ê“ÀÚ“´Â “¾Æ“ÁÖ “³·“Àº “¿ì“¼±“¼ø“À§“°¡ “µË“´Ï“´Ù.
+“ÀÌ“¿¡ “ÀÇ“ÇØ “ÄÞ“¸¶“·Î “³ª“´¶ “½Ä“À» “¸®“½º“Æ®“¿¬“»ê“ÀÚ“ÀÇ “ÀÎ“¼ö“·Î“½á “µÎ“´Â “°Í“ÀÌ “°¡“´É“ÇÕ“´Ï“´Ù.
+“ÀÌ“º¸“´Ù“µµ “¿ì“¼±“¼ø“À§“°¡ “´Ê“Àº “°Í“Àº “³í“¸® “¿¬“»ê“ÀÚ“ÀÇ "and", "or", "not"“À¸“·Î,
+“³²“Àº “°ý“È£“¸¦ “ºÙ“ÀÌ“Áö “¾Ê“Àº “¸®“½º“Æ®“¿¬“»ê“ÀÚ“ÀÇ “È£“Ãâ“À» “Æò“°¡“ÇÏ“±â“À§“ÇØ “»ç“¿ë“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù:
 
     open HANDLE, "filename"
 	or die "Can't open: $!\n";
@@ -1968,13 +1965,12 @@ See also discussion of list operators in L<Terms and List Operators (Leftward)>.
 
 =end original
 
-L<Terms and List Operators (Leftward)> “ªÎ“«ê“«¹“«È“æÑ“ß©“í­“ªÎ“ì¡“Öå“ªâ‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+L<Terms and List Operators (Leftward)> “ÀÇ “¸®“½º“Æ®“¿¬“»ê“ÀÚ“ÀÇ “ÀÇ“·Ð“µµ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä. 
 
 =head2 Logical Not
 X<operator, logical, not> X<not>
 
-(“Öå“×â“Üú“ïÒ)
-
+(“³í“¸® “ºÎ“Á¤)
 =begin original
 
 Unary "not" returns the logical negation of the expression to its right.
@@ -1982,8 +1978,8 @@ It's the equivalent of "!" except for the very low precedence.
 
 =end original
 
-’Ã±“ú£“æÑ“ß©“í­“ªÎ "not" “ªÏ“éÓ“ö°“ªË‘À´“ªë“ãÒ“ªÎ“Üú“ïÒ“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢“éÐ“à»“â÷“êÈ“ª¬“ªº“ªÃ“ªÈ“î¸“ª¤“ª³“ªÈ“ªò“ð¶“ª¤“ªÆ“ªÏ "!" “ªÈ“Ôõ’²Á“ªÇ“ª¹“¡£
+“´Ü“Ç×“¿¬“»ê“ÀÚ“ÀÇ "not" “Àº “¿À“¸¥“ÂÊ“¿¡ “¿À“´Â “½Ä“ÀÇ “ºÎ“Á¤“À» “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¿ì“¼±“¼ø“À§“°¡ “°è“¼Ó “³·“Àº “°Í“À» “»©“°í“´Â "!"“¿Í “°°“½À“´Ï“´Ù.
 
 =head2 Logical And
 X<operator, logical, and> X<and>
@@ -1999,17 +1995,17 @@ expression is evaluated only if the left expression is true.
 
 =end original
 
-“ì£“ú£“æÑ“ß©“í­“ªÎ "and" “ªÏ’Î¾“ö°“ªÎ“ãÒ“ªÎ“Öå“×â“îÝ“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢“éÐ“à»“â÷“êÈ“ª¬“ªº“ªÃ“ªÈ“î¸“ª¤“ª³“ªÈ“ªò“ð¶“ª±“ªÐ && “ªÈ“Ôõ’²Á“ªÇ“ª¹“¡£
-“ªÄ“ªÞ“ªê“¡¢“ª³“ªì“ªâ“Ó­“Õ©“æÑ“ß©“ªò“ú¼“ªÊ“ª¤“¡¢“éÓ“ö°“ªÎ“ãÒ“ªÏ“ñ§“ö°“ªÎ“ãÒ“ª¬
-“¡¸‘Õæ“¡¹“ªÇ“ª¢“ªÃ“ª¿“íÞ“ùê“ªË“ªÎ“ªß“øÄ’²Á“ªµ“ªì“ªÞ“ª¹“¡£
+“ÀÌ“Ç×“¿¬“»ê“ÀÚ“ÀÇ "and" “´Â “¾ç“ÂÊ“ÀÇ “½Ä“ÀÇ “³í“¸®“°ö“À» “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¿ì“¼±“¼ø“À§“°¡ “°è“¼Ó “³·“Àº “°Í“À» “»©“¸é "&&"“¿Í “°°“½À“´Ï“´Ù.
+“Áï, “ÀÌ“°Í“µµ “´Ü“¶ô“¿¬“»ê“À» “¼ö“Çà“ÇÏ“°í, “¿À“¸¥“ÂÊ “½Ä“Àº “¿Þ“ÂÊ“ÀÇ “½Ä“ÀÌ
+"“Âü"“ÀÎ “°æ“¿ì“¿¡“¸¸ “Æò“°¡“µË“´Ï“´Ù.
 
 =head2 Logical or, Defined or, and Exclusive Or
 X<operator, logical, or> X<operator, logical, xor>
 X<operator, logical, defined or> X<operator, logical, exclusive or>
 X<or> X<xor>
 
-(“Öå“×â“ûú“ªÈ“ïÒ“ëù“àõ“ûú“ªÈ“ÛÉ“öâ“Öå“×â“ûú)
+(“³í“¸®“ÇÕ“°ú “Á¤“ÀÇ“¼º“ÇÕ“°ú “¹è“Å¸“³í“¸®“ÇÕ)
 
 =begin original
 
@@ -2019,9 +2015,9 @@ This makes it useful for control flow
 
 =end original
 
-“ì£“ú£“æÑ“ß©“í­“ªÎ "or" “ªÏ’Î¾“ö°“ªÎ“ãÒ“ªÎ“Öå“×â“ûú“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“¡¢“éÐ“à»“â÷“êÈ“ª¬“ªº“ªÃ“ªÈ“î¸“ª¤“ª³“ªÈ“ªò“ð¶“ª¤“ªÆ || “ªÈ“Ôõ’²Á“ªÇ“ª¹“¡£
-“ª³“ªì“ªÏ“«Õ“«í’¡¼“ªò“ð¤“åÙ“ª¹“ªë“ªÎ“ªË“êó“éÄ“ªÇ“ª¹:
+“ÀÌ“Ç×“¿¬“»ê“ÀÚ“ÀÇ "or" “´Â “¾ç“ÂÊ“ÀÇ “½Ä“ÀÇ “³í“¸®“ÇÕ“À» “¹Ý“È¯“ÇÕ“´Ï.
+“ÀÌ“°Í“Àº “¿ì“¼±“¼ø“À§“°¡ “°è“¼Ó “³·“Àº “°Í“À» “»©“°í“´Â "||"“°ú “°°“½À“´Ï“´Ù.
+“ÀÌ“°Í“Àº “Èå“¸§“À» “Á¦“¾î“ÇÏ“±â“¿¡ “ÁÁ“½À“´Ï“´Ù.
 
     print FH $data		or die "Can't write to FH: $!";
 
@@ -2033,9 +2029,10 @@ probably avoid using this for assignment, only for control flow.
 
 =end original
 
-“ªÄ“ªÞ“ªê“¡¢“ª³“ªì“ªâ“Ó­“Õ©“æÑ“ß©“ªò“ú¼“ªÊ“ª¤“¡¢“éÓ“ö°“ªÎ“ãÒ“ªÏ“ñ§“ö°“ªÎ“ãÒ“ª¬
-“¡¸˜ºô“¡¹“ªÇ“ª¢“ªÃ“ª¿“íÞ“ùê“ªË“ªÎ“ªß“øÄ’²Á“ªµ“ªì“ªÞ“ª¹“¡£
-“éÐ“à»“Óø“ªÎ’´Ø“Ìõ“ªÇ“¡¢“ª³“ªì“ªÏ“ÓÛ“ìý“ªË“ªÏ“ÞÅ“ªï“ªº“¡¢“«Õ“«í’¡¼“ªÎ“ð¤“åÙ“ªÎ“ªß“ªË“ÞÅ“ª¦“ªÙ“ª­“ªÇ“ª¹“¡£
+“Áï, “ÀÌ“°Í“µµ “´Ü“¶ô“¿¬“»ê“À» “¼ö“Çà“ÇÏ“°í, “¿À“¸¥“ÂÊ“ÀÇ “½Ä“°ú “¿Þ“ÂÊ“ÀÇ “½Ä“ÀÌ
+"“°Å“Áþ"“ÀÏ “°æ“¿ì“¿¡“¿¡“¸¸ “Æò“°¡“µË“´Ï“´Ù.
+“¿ì“¼±“µµ “°ü“°è“¿¡“¼­ “ÀÌ“°Í“Àº “´ë“ÀÔ“¿¡“´Â “»ç“¿ë“ÇÏ“Áö “¾Ê“°í
+“Èå“¸§“Á¦“¾î“¿¡“¼­“¸¸ “»ç“¿ë“ÇØ“¾ß “ÇÕ“´Ï“´Ù.
 
     $a = $b or $c;		# bug: this is wrong
     ($a = $b) or $c;		# really means this
@@ -2049,8 +2046,8 @@ takes higher precedence.
 
 =end original
 
-“ª·“ª«“ª·“¡¢“ÓÛ“ìý“ª¬“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ªÎ“ãÁ“ªË "||" “ªò“«Õ“«í’¡¼“ð¤“åÙ“ªË“ÞÅ“ªª“ª¦“ªÈ“ª¹“ªë“íÞ“ùê“¡¢
-“ÓÛ“ìý“ªË“ªè“ªê“ÓÞ“ª­“ªÊ“éÐ“à»“â÷“êÈ“ªò“ò¥“ª¿“ª»“ªë“ª¿“ªá“ªË "or" “ª¬“ù±“é©“ª«“ªâ“ª·“ªì“ªÞ“ª»“ªó“¡£
+“ÇÏ“Áö“¸¸, “´ë“ÀÔ“ÀÌ “¸®“¤µ“Æ®“ÄÁ“ÅØ“½º“Æ®“ÀÏ “¶§“´Â "||" “¸¦ “Èå“¸§“Á¦“¾î“¿¡ “»ç“¿ë“ÇÒ “°æ“¿ì,
+“´ë“ÀÔ“¿¡ “ÀÇ“ÇÑ “Å« “¿ì“¼±“¼ø“À§“¸¦ “°¡“Áö“°Ô“ÇÏ“±â “À§“ÇØ "or" “°¡ “ÇÊ“¿ä“ÇÒ“Áö“µµ “¸ð“¸¨“´Ï“´Ù.
 
     @info = stat($file) || die;     # oops, scalar sense of stat!
     @info = stat($file) or die;     # better, now @info gets its due
@@ -2061,7 +2058,7 @@ Then again, you could always use parentheses.
 
 =end original
 
-“ªâ“ªÁ“ªí“ªó“¡¢“ßÈ“ªË“ÎÀ“ûÁ“ªò“ªÄ“ª±“ªÆ“ªâ“ªè“ª¤“ªÇ“ª¹“¡£
+“¹°“·Ð, “±×“³É “°ý“È£“¸¦ “ºÙ“¿©“µµ “µË“´Ï“´Ù.
 
 =begin original
 
@@ -2070,14 +2067,14 @@ It cannot short circuit, of course.
 
 =end original
 
-“ì£“ú£“æÑ“ß©“í­“ªÎ "xor" “ªÏ’Î¾“ö°“ªÎ“ãÒ“ªÎ“ÛÉ“öâ“Öå“×â“ûú“ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“ªâ“ªÁ“ªí“ªó“¡¢“Ó­“Õ©“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
+“ÀÌ“Ç×“¿¬“»ê“ÀÚ“ÀÎ "xor" “Àº “¾ç“ÂÊ“ÀÇ “½Ä“ÀÇ “¹è“Å¸“³í“¸®“ÇÕ“À» “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¹°“·Ð, “´Ü“¶ô“µµ “¾Æ“´Õ“´Ï“´Ù.
 
 =head2 C Operators Missing From Perl
 X<operator, missing from perl> X<&> X<*>
 X<typecasting> X<(TYPE)>
 
-(Perl “ªË“ªÊ“ª¤ C “ªÎ“æÑ“ß©“í­)
+(Perl “¿¡ “¾ø“´Â C “ÀÇ “¿¬“»ê“ÀÚ)
 
 =begin original
 
@@ -2085,7 +2082,7 @@ Here is what C has that Perl doesn't:
 
 =end original
 
-C “ªË“ª¢“ªÃ“ªÆ Perl “ªË“Ùí“ª¤“ªâ“ªÎ“ªÏ“ì¤“ù»“ªÎ“÷×“ªê“ªÇ“ª¹:
+C “¿¡ “ÀÖ“°í Perl “¿¡ “¾ø“´Â “°Í“Àº “¾Æ“·¡“¿Í “°°“½À“´Ï“´Ù.
 
 =over 8
 
@@ -2097,8 +2094,7 @@ Address-of operator.  (But see the "\" operator for taking a reference.)
 
 =end original
 
-“«¢“«É“«ì“«¹“æÑ“ß©“í­“¡£
-("\" “æÑ“ß©“í­“ª¬“«ê“«Õ“«¡“«ì“«ó“«¹“ªÎ“ª¿“ªá“ªË“éÄ“ª¤“ªé“ªì“ªÞ“ª¹“¡£)
+“ÁÖ“¼Ò“¿¬“»ê“ÀÚ ("\" “¿¬“»ê“ÀÚ“°¡ “¸®“ÆÛ“·±“½º“ÇÒ“¶§ “»ç“¿ë“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù)
 
 =item unary *
 
@@ -2109,8 +2105,7 @@ operators are typed: $, @, %, and &.)
 
 =end original
 
-“ù¬“«¢“«É“«ì“«¹‘²Î“ðÎ“æÑ“ß©“í­“¡£
-(Perl “ªÎ“ù¬‘²Î“ðÎ“«×“«ê“«Õ“«£“«¯“«¹“æÑ“ß©“í­“ª¬“úþ“ªÅ“ª±“ªò“ú¼“ªÊ“ª¤“ªÞ“ª¹: $, @, %, &“¡£)
+“ÇÇ“ÁÖ“¼Ò“Âü“Á¶“¿¬“»ê“ÀÚ ( Perl “ÀÇ “ÇÇ“Âü“Á¶“¼­“µÎ“¿¬“»ê“ÀÚ“°¡ “Çü“ÅÂ“¸¦ “Áþ“½À“´Ï“´Ù : $, @, %, &)
 
 =item (TYPE)
 
@@ -2120,7 +2115,7 @@ Type-casting operator.
 
 =end original
 
-“úþ“ªÎ“«­“«ã“«¹“«È“æÑ“ß©“í­“¡£
+“Çü“ÅÂ“ÀÇ “Ä³“½º“Æ® “¿¬“»ê“ÀÚ
 
 =back
 
@@ -2129,7 +2124,7 @@ X<operator, quote> X<operator, quote-like> X<q> X<qq> X<qx> X<qw> X<m>
 X<qr> X<s> X<tr> X<'> X<''> X<"> X<""> X<//> X<`> X<``> X<<< << >>>
 X<escape sequence> X<escape>
 
-(“«¯“«©’¡¼“«È“ªÈ“«¯“«©’¡¼“«È“ù¦“ªÎ“æÑ“ß©“í­)
+(“ÀÎ“¿ë“°ú “ÀÎ“¿ë“°°“Àº “¿¬“»ê“ÀÚ)
 
 =begin original
 
@@ -2142,12 +2137,11 @@ any pair of delimiters you choose.
 
 =end original
 
-“«¯“«©’¡¼“«È“ªÏ“«ê“«Æ“«é“«ë“ö·“ªÇ“ª¢“ªë“ªÈ“ÍÅ“ª¨“ªë“ªÎ“ª¬“ÜÅ“÷×“ªÇ“ª¹“ª¬“¡¢Perl “ªË“ªª“ª¤“ªÆ“¡¢
-“«¯“«©’¡¼“«È“ªÏ“æÑ“ß©“í­“ªÈ“ª·“ªÆ’Æ¯“ª­“¡¢“ªµ“ªÞ“ª¶“ªÞ“ªÊ“î÷“ËÒ“ªä“«Ñ“«¿’¡¼“«ó“«Þ“«Ã“«Á“ªÎ“Ñ¦“Òö“ªò
-“ò¥“ªÃ“ªÆ“ª¤“ªÞ“ª¹“¡£
-“ª½“ªÎ“ªè“ª¦“ªÊ“ÔÑ“íÂ“ªò“ªµ“ª»“ªë“ªÎ“ªË“¡¢Perl “ªÏ“Î±“ã§“îÜ“ªË“«¯“«©’¡¼“«È“Ùþ“í®“ªò“ÞÅ“ªÃ“ªÆ“ª¤“ªÞ“ª¹“ª¬“¡¢
-“ªÉ“ªÎ“ðú“×¾“ªÎ“«¯“«©’¡¼“«È“ªâ“¡¢“í»“ÝÂ“ªÇ“«¯“«©’¡¼“«È“Ùþ“í®“ªò“àÔ“ªÙ“ªë“ªè“ª¦“ªË“ªÊ“ªÃ“ªÆ“ª¤“ªÞ“ª¹“¡£
-“ì¤“ù»“ªÎ“øú“ªÇ“ªÏ“¡¢{} “ª¬“ª½“ªÎ“àÔ“ªó“ªÀ‘Çø“ï·“Ùþ“í®“ªÎ“«Ú“«¢“ªò“ãÆ“ª·“ªÆ“ª¤“ªÞ“ª¹“¡£
+“ÀÎ“¿ë“Àº “¸®“ÅÍ“·² “°ª“ÀÌ“¸é “»ý“°¢“ÇÏ“´Â“°Ô “Æò“¹ü“ÇÏ“Áö“¸¸, Perl “¿¡“¼­“´Â
+“ÀÎ“¿ë“Àº “¿¬“»ê“ÀÚ“·Î “¿ò“Á÷“ÀÌ“°í, “¿©“·¯“°¡“Áö “Àü“°³“³ª “ÆÐ“ÅÏ“¸Å“Ä¡“ÀÇ “±â“´É“À» “°¡“Áö“°í “ÀÖ“½À“´Ï“´Ù.
+“±×“¿Í “°°“Àº “µ¿“ÀÛ“À» “ÇÏ“±â“¿¡“´Â, Perl “Àº “½À“°ü“Àû“À¸“·Î “ÀÎ“¿ë“¹®“ÀÚ“¸¦ “»ç“¿ë“ÇÏ“Áö“¸¸
+“¾î“¶² “Á¾“·ù“ÀÇ “ÀÎ“¿ë“µµ “ÀÚ“½Å“ÀÇ “ÀÎ“¿ë“¹®“ÀÚ“¸¦ “¼±“ÅÃ“ÇÒ “¼ö “ÀÖ“°Ô “µË“´Ï“´Ù.
+“¾Æ“·¡“ÀÇ “Ç¥“¿¡“¼­“´Â {}“°¡ “¼±“ÅÃ“ÇÑ “¿µ“¿ª“³ª“´¸“¹®“ÀÚ“ÀÇ “½Ö“À» “Ç¥“½Ã“ÇÕ“´Ï“´Ù.
 
 =begin original
 
@@ -2166,19 +2160,19 @@ any pair of delimiters you choose.
 
 =end original
 
-     “÷×“ßÈ“ÑÀ“Ûö  “Ûñ“éÄ“ÑÀ“Ûö        “ëò“Ú«             “î÷“ËÒ
+     “º¸“Åë“Ç¥“±â  “¹ü“¿ë“Ç¥“±â        “ÀÇ“¹Ì             “Àü“°³
     =================================================
-	''	 q{}	     “«ê“«Æ“«é“«ë		“Üô“Ê¦
-	""	qq{}	     “«ê“«Æ“«é“«ë		“Ê¦
-	``	qx{}	     “«³“«Þ“«ó“«É		“Ê¦ *
-		qw{}	     ’Ã±“åÞ“«ê“«¹“«È		“Üô“Ê¦
-	//	 m{}	  “«Ñ“«¿’¡¼“«ó“«Þ“«Ã“«Á	“Ê¦ *
-		qr{}	     “«Ñ“«¿’¡¼“«ó		“Ê¦ *
-		 s{}{}	       “öÇ“üµ		“Ê¦ *
-		tr{}{}	       ’ÊÑ“üµ		“Üô“Ê¦ (“Ó£“ª·“ì¤“ù»“ªò‘²Î“ðÎ“ªÎ“ª³“ªÈ)
-        <<EOF            “«Ò“«¢“«É“«­“«å“«á“«ó“«È       “Ê¦ *
+	''	 q{}	     “¸®“ÅÍ“·²		“ºÒ“°¡
+        ""	qq{}	     “¸®“ÅÍ“·²		“°¡“´É
+	``	qx{}	     “Ä¿“¸Ç“µå		“°¡“´É *
+		qw{}	     “´Ü“¾î“¸®“½º“Æ®		“ºÒ“°¡
+        //	 m{}	     “ÆÐ“ÅÏ“¸Å“Ä¡	        “°¡“´É *
+		qr{}	     “ÆÐ“ÅÏ		“°¡“´É *
+		 s{}{}	     “Ä¡“È¯		“°¡“´É *
+		tr{}{}	     “º¯“È¯		“ºÒ“°¡ (“´Ü, “¾Æ“·¡“Âü“Á¶)
+       <<EOF                  Here-doc          “°¡“´É *
 
-	* '' “ª¬“«Ç“«ê“«ß“«¿“ªÇ“ªÊ“ª¤“íÞ“ùê“ªÎ“ªß
+	* ''“°¡ “±¸“È¹“¹®“ÀÚ“°¡ “¾Æ“´Ñ “°æ“¿ì 
 
 =begin original
 
@@ -2188,9 +2182,9 @@ that
 
 =end original
 
-“àÔ“ªó“ªÀ‘Çø“ï·“Ùþ“í®“ª¬“ÎÀ“ûÁ“ªÎ“×¾“ªÇ“ªÊ“ª¤“íÞ“ùê“ªË“ªÏ“¡¢“îñ“ý­“ªÎ“Ùþ“í®“ªÈ“ª·“ªÆ“ÔÒ“ìé“ªÎ“ªâ“ªÎ“ªò
-“ÞÅ“ª¤“ªÞ“ª¹“ª¬“¡¢4 “ªÄ“ªÎ“ÎÀ“ûÁ ((), <>, [], {}) “ªÎ“íÞ“ùê“ªË“ªÏ“«Í“«¹“«È“ªÇ“ª­“ªÞ“ª¹“¡£
-“ªÄ“ªÞ“ªê“¡¢“ì¤“ù»“ªÎ“ªâ“ªÎ“ªÏ“¡¢
+“¼±“ÅÃ“µÈ “¿µ“¿ª“³ª“´®“¹®“ÀÚ“°¡ “°ý“È£“ÀÇ “Á¾“·ù“°¡ “¾Æ“´Ñ“°æ“¿ì“¿¡“´Â “Àü“ÈÄ“ÀÇ “¹®“ÀÚ“·Î“½á “µ¿“ÀÏ“ÇÑ “°Í“À»
+“»ç“¿ë“ÇÏ“Áö“¸¸, 4“°³“ÀÇ “°ý“È£ ((), <>, [], {})“ÀÇ “°æ“¿ì“¿¡“´Â “µ¿“ÀÏ“ÇÏ“°Ô “»ç“¿ë“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
+“Áï, “¾Æ“·¡“¿Í “°°“Àº “°Í“Àº 
 
 	q{foo{bar}baz}
 
@@ -2200,7 +2194,7 @@ is the same as
 
 =end original
 
-“ì¤“ù»“ªÈ“ÔÒ“ª¸“ªÇ“ª¹“¡£
+“ÀÌ“°Í“°ú “°°“½À“´Ï“´Ù.
 
 	'foo{bar}baz'
 
@@ -2210,8 +2204,8 @@ Note, however, that this does not always work for quoting Perl code:
 
 =end original
 
-“ª·“ª«“ª·“¡¢“ì¤“ù»“ªÎ“«³’¡¼“«É“ªÏ“«¯“«©’¡¼“«È“ªµ“ªì“ª¿ Perl “«³’¡¼“«É“ªÇ“ªÏ
-“ª¤“ªÄ“ªâ“ïá“ª·“ª¯“ÔÑ“ª¯“ªï“ª±“ªÇ“ªÏ“ªÊ“ª¤“ª³“ªÈ“ªË“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤:
+“±×“·¯“¤¿, “¾Æ“·¡“ÀÇ “ÄÚ“µå“´Â “ÀÎ“¿ë“µÈ Perl “ÄÚ“µå “¿¡“¼­“´Â “Ç×“»ó “¹Ù“¸£“°Ô “¿ò“Á÷“ÀÌ“Áö
+“¾Ê“´Â “°Í“¿¡ “´ë“ÇØ “ÁÖ“ÀÇ“ÇØ “ÁÖ“¼¼“¿ä
 
 	$s = q{ if($a eq "}") ... }; # WRONG
 
@@ -2223,9 +2217,9 @@ to do this properly.
 
 =end original
 
-“ª³“ªì“ªÏ“Ùþ“Ûö“«¨“«é’¡¼“ªÈ“ªÊ“ªê“ªÞ“ª¹“¡£
-C<Text::Balanced> “«â“«¸“«å’¡¼“«ë(CPAN “ª«“ªé“¡¢“ªÞ“ª¿“ªÏ Perl 5.8 “ª«“ªé“ªÏ“øö“ñÞ“ÛÕ“øÖ
-“ªÎ“ìé“Ý»“ªÇ“ª¹)“ªÏ“ª³“ªì“ªò“îê“ï·“ªË“ú¼“ª¤“ªÞ“ª¹“¡£
+“ÀÌ“°Í“Àº “¹®“¹ý“¿¡“·¯“°¡ “µË“´Ï“´Ù.
+C<Text::Balanced> “¸ð“µâ (CPAN “¿¡“¼­ “È¤“Àº Perl 5.8“¿¡“¼­“´Â “Ç¥“ÁØ“¹è“Ä¡“¸ð“µâ)“Àº
+“ÀÌ“°Í“À» “Àû“Àý“ÇÏ“°Ô “¼ö“Çà“ÇÕ“´Ï“´Ù.
 
 =begin original
 
@@ -2237,11 +2231,11 @@ from the next line.  This allows you to write:
 
 =end original
 
-“æÑ“ß©“í­“ªÈ“«¯“«©’¡¼“«È“Ùþ“í®“ªÎ“Êà“ªË“Íö“ÛÜ“ªò“öÇ“ª¯“ª³“ªÈ“ªâ“õó‘À´“ªÞ“ª¹“¡£
-“ª¿“ªÀ“ª·“¡¢C<#> “ªò“«¯“«©’¡¼“«È“Ùþ“í®“ªÈ“ª·“ªÆ“ÞÅ“ª¦“íÞ“ùê“ªÏ“ÖÇ“èâ“ªÇ“ª¹“¡£
-C<q#foo#> “ªÏ“Ùþ“í®“Öª C<foo> “ªÈ“ª·“ªÆ“«Ñ’¡¼“«¹“ªµ“ªì“ªÞ“ª¹“ª¬“¡¢
-C<q #foo#> “ªÏ C<q> “æÑ“ß©“í­“ªÎ“ý­“ªË“«³“«á“«ó“«È“ª¬“ª¢“ªë“ªÈ“ªß“ªÊ“ªµ“ªì“ªÞ“ª¹“¡£
-“ª³“ªÎ“ìÚ‘Êý“ªÏ“ó­“ªÎ“ú¼“ª«“ªé“ö¢“ªé“ªì“ªÞ“ª¹“¡£“ªÄ“ªÞ“ªê“¡¢“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ßö“ª±“ªÞ“ª¹:
+“¿¬“»ê“ÀÚ“´Â “ÀÎ“¿ë“¹®“ÀÚ“ÀÇ “»ç“ÀÌ“¿¡ “°ø“¹é“À» “³Ö“À» “¼ö “ÀÖ“½À“´Ï“´Ù.
+“´Ü“Áö C<#>“À» “ÀÎ“¿ë“¹®“ÀÚ“·Î “»ç“¿ë“ÇÒ “°æ“¿ì“´Â “¿¹“¿Ü“ÀÔ“´Ï“´Ù.
+C<q#foo#> “´Â “¹®“ÀÚ“¿­ C<foo> “·Î “ÇØ“¼®“µÇ“Áö“¸¸, 
+C<q #foo#> “´Â C<q> “¿¬“»ê“ÀÚ“ÀÇ “µÚ“ÀÇ “ÄÚ“¸à“Æ®“°¡ “ÀÖ“À¸“¸é “¹«“½Ã“ÇÕ“´Ï“´Ù.
+“ÀÌ “ÀÎ“¼ö“´Â “´Ù“À½ “ÁÙ“¿¡“¼­ “¾ò“À» “¼ö “ÀÖ“½À“´Ï“´Ù. “Áï, “¾Æ“·¡“¿Í “°°“ÀÌ “¾¹“´Ï“´Ù:
 
     s {foo}  # Replace foo
       {bar}  # with bar.
@@ -2254,7 +2248,7 @@ X<\t> X<\n> X<\r> X<\f> X<\b> X<\a> X<\e> X<\x> X<\0> X<\c> X<\N>
 
 =end original
 
-“ì¤“ù»“ªÎ“«¨“«¹“«±’¡¼“«×“«·’¡¼“«±“«ó“«¹“ª¬“î÷“ËÒ“ªÈ“Ùþ“í®’ÊÑ“üµ“ªÎ“Ï°“Ùþ“ªÇ“××“éÄ“Ê¦“Òö“ªÇ“ª¹“¡£
+“¾Æ“·¡“ÀÇ Escape Sequence“°¡ “Àü“°³“¿Í “¹®“ÀÚ“º¯“È¯“ÀÇ “±¸“¹®“¿¡“¼­ “ÀÌ“¿ë“°¡“´É“ÇÕ“´Ï“´Ù.
 X<\t> X<\n> X<\r> X<\f> X<\b> X<\a> X<\e> X<\x> X<\0> X<\c> X<\N>
 
 =begin original
@@ -2274,18 +2268,18 @@ X<\t> X<\n> X<\r> X<\f> X<\b> X<\a> X<\e> X<\x> X<\0> X<\c> X<\N>
 
 =end original
 
-    \t          “«¿“«Ö                      (HT, TAB)
-    \n          “ËÇ“ú¼                      (NL)
-    \r          “ÜÖ’µ¢                      (CR)
-    \f          “ËÇ“«Ú’¡¼“«¸                  (FF)
-    \b          “«Ð“«Ã“«¯“«¹“«Ú’¡¼“«¹            (BS)
-    \a          “«¢“«é’¡¼“«à                  (BEL)
-    \e          “«¨“«¹“«±’¡¼“«×                (ESC)
-    \033        8 “òä‘Êý“ªÇ“øú“ª·“ª¿“Ùþ“í®        (“ÖÇ: ESC)
-    \x1b        16 “òä‘Êý“ªÇ“øú“ª·“ª¿“Ùþ“í®       (“ÖÇ: ESC)
-    \x{263a}	16 “òä‘Êý“ªÇ“øú“ª·“ª¿“«ï“«¤“«É“Ùþ“í® (“ÖÇ: SMILEY)
-    \c[         “«³“«ó“«È“«í’¡¼“«ë“Ùþ“í®          (“ÖÇ: ESC)
-    \N{name}	“Ù£“îñ“ªÄ“ª­ Unicode “Ùþ“í®
+    \t          “ÅÇ                      (HT, TAB)
+    \n          “ÁÙ“¹Ù“²Þ                  (NL)
+    \r          “º¹“±Í                    (CR)
+    \f          “Æä“ÀÌ“Áö“¹Ù“²Þ              (FF)
+    \b          “¹é“½º“Æä“ÀÌ“½º              (BS)
+    \a          “¾Ë“¶÷                    (BEL)
+    \e          Escape                  (ESC)
+    \033        8 “Áø“¼ö“·Î “Ç¥“Çö“µÈ “¹®“ÀÚ    (“¿¹: ESC)
+    \x1b        16 “Áø“¼ö“·Î “Ç¥“Çö“µÈ “¹®“ÀÚ   (“¿¹: ESC)
+    \x{263a}	16 “Áø“¼ö“·Î “Ç¥“Çö“µÈ “¿Í“ÀÌ“µå“¹®“ÀÚ (“¿¹: SMILEY)
+    \c[         “ÄÁ“Æ®“·Ñ “¹®“ÀÚ             (“¿¹: ESC)
+    \N{name}	“ÀÌ“¸§“ºÙ“Àº “À¯“´Ï“ÄÚ“µå “¹®“ÀÚ 
 
 =begin original
 
@@ -2315,8 +2309,8 @@ the vertical tab (VT - ASCII 11), but you may use C<\ck> or C<\x0b>.
 
 =end original
 
-B<“ñ¼“ëò>: C “ªä“ª½“ªÎ“öâ“ªÎ“åë“åÞ“ªÈ“êÞ“ªÃ“ªÆ“¡¢Perl “ªÏ“á÷“òÁ“«¿“«Ö (VT - ASCII 11) “ªÎ“ª¿“ªá“ªÎ
-\v “«¨“«¹“«±’¡¼“«×“«·’¡¼“«±“«ó“«¹“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“ª¬“¡¢C<\ck> “ªÞ“ª¿“ªÏ C<\x0b> “ª¬“ÞÅ“ª¨“ªÞ“ª¹“¡£
+B<“ÁÖ“ÀÇ>: C “³ª “±× “¿Ü“ÀÇ “¾ð“¾î“¿Í “´Þ“¸® Perl “Àº Vertical Tab (VT - ASCII 11)“À» “À§“ÇØ
+\v Escape Sequence“´Â “¾ø“Áö“¸¸ , C<\ck> “È¤“Àº C<\x0b>“¸¦ “¾µ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
 =begin original
 
@@ -2326,7 +2320,7 @@ X<\l> X<\u> X<\L> X<\U> X<\E> X<\Q>
 
 =end original
 
-“ì¤“ù»“ªÎ“«¨“«¹“«±’¡¼“«×“«·’¡¼“«±“«ó“«¹“ª¬“î÷“ËÒ“ªÈ“Ùþ“í®’ÊÑ“üµ“ªÎ“Ï°“Ùþ“ªÇ“××“éÄ“Ê¦“Òö“ªÇ“ª¹“¡£
+“¾Æ“·¡“ÀÇ Escape Sequence “´Â “Àü“°³“¿Í “¹®“ÀÚ“º¯“È¯“ÀÇ “±¸“¹®“¿¡“¼­ “ÀÌ“¿ë“°¡“´É“ÇÕ“´Ï“´Ù.
 X<\l> X<\u> X<\L> X<\U> X<\E> X<\Q>
 
 =begin original
@@ -2340,12 +2334,12 @@ X<\l> X<\u> X<\L> X<\U> X<\E> X<\Q>
 
 =end original
 
-    \l          “ó­“ªÎ“Ùþ“í®“ªò“á³“Ùþ“í®“ªË“ª¹“ªë
-    \u          “ó­“ªÎ“Ùþ“í®“ªò“ÓÞ“Ùþ“í®“ªË“ª¹“ªë
-    \L          \E “ªÞ“ªÇ“á³“Ùþ“í®“ªË“ª¹“ªë
-    \U          \E “ªÞ“ªÇ“ÓÞ“Ùþ“í®“ªË“ª¹“ªë
-    \E          ’ÊÑ“ÌÚ“ªÎ“ðû“ªï“ªê
-    \Q          \E “ªÞ“ªÇ“Þª’Ã±“åÞ“Ùþ“í®“ªò“«¯“«©’¡¼“«È“ª¹“ªë
+    \l          “´Ù“À½ “¹®“ÀÚ“¸¦ “¼Ò“¹®“ÀÚ“·Î “ÇÑ“´Ù 
+    \u          “´Ù“À½ “¹®“ÀÚ“¸¦ “´ë“¹®“ÀÚ“·Î “ÇÑ“´Ù 
+    \L          \E “±î“Áö “¼Ò“¹®“ÀÚ“·Î “ÇÑ“´Ù 
+    \U          \E “±î“Áö “´ë“¹®“ÀÚ“·Î “ÇÑ“´Ù 
+    \E          “º¯“°æ“ÀÇ “³¡ 
+    \Q          \E “±î“Áö “ºñ“´Ü“¾î“¹®“ÀÚ“¸¦ “ÀÎ“¿ë“ÇÑ“´Ù 
 
 =begin original
 
@@ -2358,14 +2352,14 @@ see L<charnames>.
 
 =end original
 
-C<use locale> “ª¬“êó’¸ú“ªÎ“íÞ“ùê“¡¢
-C<\l>, C<\L>, C<\u>, C<\U> “ªÇ“ÞÅ“ªï“ªì“ªë“ÓÞ“Ùþ“í®“á³“Ùþ“í®“«Æ’¡¼“«Ö“«ë“ªÏ
-“úÞ“î¤“ªÎ“«í“«±’¡¼“«ë“ªÎ“ªâ“ªÎ“ª¬“ÞÅ“ªï“ªì“ªÞ“ª¹“¡£
-L<perllocale> “ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
-(“ÖÇ“ª¨“ªÐ“¡¢C<\N{}> “ªä“¡¢0x100 “ì¤“ß¾“ªÎ“«ï“«¤“«É 16 “òä“Ùþ“í®“ªò“ÞÅ“ªÃ“ª¿) Unicode “ª¬
-“ÞÅ“ªï“ªì“ªÆ“ª¤“ªë“íÞ“ùê“¡¢C<\l>, C<\L>, C<\u>, C<\U> “ªÇ“ÞÅ“ªï“ªì“ªë“ÓÞ“Ùþ“í®“á³“Ùþ“í®
-“«Æ’¡¼“«Ö“«ë“ªÏ Unicode “ªÇ“ïÒ“ëù“ªµ“ªì“ªÆ“ª¤“ªë“ªâ“ªÎ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-C<\N{name}> “ªÎ“«É“«­“«å“«á“«ó“«È“ªË’´Ø“ª·“ªÆ“ªÏ“¡¢L<charnames> “ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+C<use locale> “°¡ “À¯“È¿“ÇÑ “°æ“¿ì, 
+C<\l>, C<\L>, C<\u>, C<\U> “¿¡“¼­ “»ç“¿ë“µÈ “´ë“¹®“ÀÚ/“¼Ò“¹®“ÀÚ “Å×“ÀÌ“ºí“Àº 
+“Çö“Àç“ÀÇ “·Î“ÄÉ“ÀÏ“ÀÌ “»ç“¿ë“µË“´Ï“´Ù.
+L<perllocale> “À» “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
+(“¿¹“¸¦ “µé“¾î, C<\N{}> “³ª 0x100 “ÀÌ“»ó“ÀÇ “¿Í“ÀÌ“µå 16“Áø“¼ö“¹®“ÀÚ“¸¦ “»ç“¿ë“ÇÑ) 
+“À¯“´Ï“ÄÚ“µå“°¡ “»ç“¿ë“µÈ “°æ“¿ì, C<\l>, C<\L>, C<\u>, C<\U> “¿¡“¼­ “»ç“¿ë“ÇÑ
+“´ë“¹®“ÀÚ/“¼Ò“¹®“ÀÚ “Å×“ÀÌ“ºí“Àº “À¯“´Ï“ÄÚ“µå“¿¡ “Á¤“ÀÇ“µÈ “°Í“ÀÌ “µË“´Ï“´Ù.
+C<\N{name}> “ÀÇ “¹®“¼­“¿¡ “´ë“ÇØ“¼­“´Â L<charnames> “¸¦ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =begin original
 
